--- a/project/src/main/res/values-th/strings.xml
+++ b/project/src/main/res/values-th/strings.xml
@@ -266,7 +266,7 @@
     <!-- Template for multiple duration text on Search results Eg: 2d+ -->
     <string name="search_result_multiple_duration_TEMPLATE">%1$s +</string>
     <!-- Cancellation policy template -->
-    <string name="cancellation_policy_TEMPLATE">คุณสามารถยกเลิกได้ฟรีภายใน %1$s ก่อนวันเริ่มการเดินทางของคุณ หลังจากพ้นเวลาดังกล่าวแล้ว จะไม่สามารถยกเลิก เปลี่ยนแปลง หรือรับเงินคืนได้</string>
+    <string name="lx_cancellation_policy_TEMPLATE">คุณสามารถยกเลิกได้ฟรีจนถึง {hours} ชั่วโมงก่อนการจองของคุณจะเริ่ม หลังจากพ้นเวลาดังกล่าวแล้ว จะไม่สามารถยกเลิก เปลี่ยนแปลง หรือรับเงินคืนได้</string>
     <!-- Cancellation policy text for non-cancellable activities -->
     <string name="lx_policy_non_cancellable">การจองนี้ไม่สามารถขอคืนเงิน และไม่สามารถเปลี่ยนแปลงหรือยกเลิกหลังจากที่จองได้</string>
     <!-- LX checkout cost breakdown total due today -->
@@ -712,8 +712,6 @@
         <item quantity="other">รายการในการเดินทาง</item>
     </plurals>
 
-    <!-- LX Sort & Filter "Apply" header -->
-    <string name="lx_apply_sort_filter">ใช้</string>
     <!-- LX Sort & Filter "Sort By" section header -->
     <string name="lx_sort_by">เรียงตาม</string>
     <!-- LX Sort & Filter "Categories" header -->
@@ -876,32 +874,23 @@
     <string name="unable_to_sign_into_facebook">ไม่สามารถลงชื่อเข้าใช้ Facebook</string>
     <!-- Sign failed try again. Note: the text "Country setting" is referring to the option from the settings page that is titled "Country" in the English translation. -->
     <string name="sign_in_failed_try_again">ไม่สามารถเข้าสู่ระบบ หากอีเมลและรหัสผ่านของคุณถูกต้อง โปรดตรวจสอบให้แน่ใจว่าการตั้งค่าประเทศในแอพของคุณถูกต้อง</string>
-    <!-- User needs to reset password -->
-    <string name="sign_in_reset_password_TEMPLATE">เราต้องการให้คุณสร้างบัญชีใหม่เพื่อใช้เข้าสู่ระบบเว็บไซต์ {brand} ทั่วโลก &lt;br&gt;โปรดตั้งรหัสผ่านใหม่โดยใช้ลิงก์ \&apos;ลืมรหัสผ่าน\&apos; ด้านล่าง</string>
     <!-- Facebook connect password hint -->
     <string name="brand_password_hint_TEMPLATE">รหัสผ่าน {brand}</string>
     <!-- Link accounts -->
     <string name="link_accounts">เชื่อมต่อบัญชี</string>
-    <!-- Failure to update the user -->
-    <string name="failure_to_update_user">ไม่สามารถดึงข้อมูลผู้ใช้ที่อัพเดทได้</string>
-    <!-- User Denied email permission try again button text -->
-    <string name="authorize_email_facebook_button">อนุญาตให้เข้าถึงอีเมล</string>
     <!-- User Denied email permission Heading -->
     <string name="user_denied_permission_email_heading">การอนุญาตอีเมล</string>
-    <!-- User Denied email permission re-request message -->
-    <string name="user_denied_permission_email_message_TEMPLATE">ในการเข้าสู่ระบบด้วย Facebook เราต้องขออนุญาตตรวจสอบที่อยู่อีเมลของคุณ \n\nโปรดแตะที่ปุ่ม Facebook ด้านล่างเพื่ออนุญาตให้ {brand} ตรวจสอบอีเมลของคุณ ขอบคุณ</string>
     <!-- Linking your accounts -->
     <string name="linking_your_accounts">กำลังเชื่อมต่อบัญชีของคุณ…</string>
-    <!-- Sign In -->
-    <string name="Sign_In">เข้าสู่ระบบ</string>
+    <!-- User Denied email permission try again button text -->
+    <string name="authorize_email_facebook_button">อนุญาตให้เข้าถึงอีเมล</string>
+    <!-- User Denied email permission re-request message -->
+    <string name="user_denied_permission_email_message_TEMPLATE">ในการเข้าสู่ระบบด้วย Facebook เราต้องขออนุญาตตรวจสอบที่อยู่อีเมลของคุณ \n\nโปรดแตะที่ปุ่ม Facebook ด้านล่างเพื่ออนุญาตให้ {brand} ตรวจสอบอีเมลของคุณ ขอบคุณ</string>
+
     <!-- Sign in with Expedia -->
     <string name="Sign_in_with_TEMPLATE">เข้าสู่ระบบด้วย {brand}</string>
-    <!-- Sign in with the current brand -->
-    <string name="sign_in_with_brand_TEMPLATE">เข้าสู่ระบบด้วย {brand}</string>
     <!-- or -->
     <string name="or">หรือ</string>
-    <!-- Already signed in -->
-    <string name="already_signed_in">เข้าสู่ระบบอยู่แล้ว</string>
 
     <!-- Restricted Profile -->
     <!-- Restricted profile sign in message -->
@@ -1719,6 +1708,12 @@
     <string name="select_payment">เลือกการชำระเงิน</string>
     <!-- Select payment sentence case -->
     <string name="select_payment_sentence_case">รายละเอียดการชำระเงิน</string>
+    <!-- Select payment sentence case AB Test variate1 -->
+    <string name="select_payment_sentence_case_variate1">ป้อนรายละเอียดการชำระเงิน</string>
+    <!-- Select payment sentence case AB Test variate2 -->
+    <string name="select_payment_sentence_case_variate2">การชำระเงิน</string>
+    <!-- Select payment callout AB Test variate2 -->
+    <string name="select_payment_callout">ป้อนรายละเอียด</string>
     <!-- Add new card -->
     <string name="add_new_card">เพิ่มบัตรใหม่</string>
     <!-- Overview button -->
@@ -1813,6 +1808,10 @@
     <string name="menu_checkout">จอง</string>
     <!-- Our best price gaurentee string -->
     <string name="best_price_guarantee">รับประกันราคาที่ดีที่สุด</string>
+    <!-- Label for address of hotel in checkout/receipt screen-->
+    <string name="hotel_receipt_address">ที่อยู่:</string>
+    <!-- Label to view map of hotel in checkout/receipt screen-->
+    <string name="hotel_receipt_view_map">ดูแผนที่</string>
     <!-- Expedia Rate - Non merchant default infosite messaging -->
     <string name="non_merchant_rate_TEMPLATE">ราคา {brand}</string>
     <!-- Free cancellation template string where we insert the date the free cancellation expires -->
@@ -1853,6 +1852,8 @@
     <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">ราคารวมสำหรับการเดินทางของคุณ ซึ่งรวมค่าธรรมเนียมรีสอร์ท &lt;b&gt;%1$s&lt;/b&gt; แล้ว จะเป็น &lt;b&gt;%2$s&lt;/b&gt; คุณจะชำระยอดเงินที่เหลือที่โรงแรม (ในสุกลเงินท้องถิ่นของโรงแรม) เมื่อคุณเข้าพัก</string>
     <!-- Flights AB Test Free Cancellation-->
     <string name="ab_test_flights_free_cancellation">ยกเลิกฟรีภายใน 24 ชั่วโมงหลังการจอง</string>
+    <!-- Flights AB Test Traveler info missing callout label -->
+    <string name="ab_test_flights_missing_info_callout">ป้อนรายละเอียดผู้เดินทาง</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -1909,20 +1910,48 @@
     <string name="guest_details">รายละเอียดผู้เข้าพัก</string>
     <!-- Add adult traveler number template -->
     <string name="add_adult_number_TEMPLATE">รายละเอียดผู้ใหญ่ %1$s</string>
+    <!-- AB test variate 1 - Add adult traveler number template -->
+    <string name="add_adult_number_variate1_TEMPLATE">ป้อนรายละเอียดผู้ใหญ่ %1$s</string>
+    <!-- AB test variate 2 - Add adult traveler number template -->
+    <string name="add_adult_number_variate2_TEMPLATE">ผู้ใหญ่ %1$s</string>
     <!-- Add adult traveler details label -->
     <string name="add_adult">รายละเอียดผู้ใหญ่</string>
+    <!-- AB test variate 1 - Add adult traveler details label -->
+    <string name="add_adult_variate1">ป้อนรายละเอียดผู้ใหญ่</string>
+    <!-- AB test variate 2 - Add adult traveler details label -->
+    <string name="add_adult_variate2">ผู้ใหญ่</string>
     <!-- Add child traveler number template -->
     <string name="add_child_number_TEMPLATE">รายละเอียดเด็ก %1$s</string>
     <!-- Add child traveler number template. We need to show the age of each child passenger -->
     <string name="add_child_with_age_TEMPLATE">รายละเอียดอายุ%1$s</string>
+    <!-- AB test variate 1 - Add child traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_variate1_TEMPLATE">ป้อนรายละเอียดผู้เดินทางอายุ %1$s ปี</string>
+    <!-- Add child variate 2 - traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_variate2_TEMPLATE">%1$s ปี</string>
     <!-- Add infant in lap traveler number template -->
     <string name="add_infant_in_lap_number_TEMPLATE">รายละเอียดทารกนั่งตัก%1$s</string>
+    <!-- AB test variate 1 - Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_variate1_TEMPLATE">ป้อนรายละเอียดทารกนั่งตัก %1$s</string>
+    <!-- AB test variate 2 - Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_variate2_TEMPLATE">ทารกนั่งตัก %1$s</string>
     <!-- Add just one infant in lap, travelers checkout screen -->
     <string name="add_infant_in_lap">รายละเอียดทารกนั่งตัก</string>
+    <!-- Ab test variate 1 - Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap_variate1">ป้อนรายละเอียดทารกนั่งตัก</string>
+    <!-- Ab test variate 2 - Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap_variate2">ทารกนั่งตัก</string>
     <!-- Add infant in seat traveler number template -->
     <string name="add_infant_in_seat_number_TEMPLATE">รายละเอียดทารกนั่งที่นั่ง%1$s</string>
+    <!-- AB test variate 1- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_variate1_TEMPLATE">ป้อนรายละเอียดทารกนั่งที่นั่ง %1$s</string>
+    <!-- AB test variate 2- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_variate2_TEMPLATE">ทารกนั่งที่นั่ง %1$s</string>
     <!-- Add just one infant in seat, travelers checkout screen -->
     <string name="add_infant_in_seat">รายละเอียดทารกนั่งที่นั่ง</string>
+    <!-- AB test variate 1 - Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat_variate1">ป้อนรายละเอียดทารกนั่งที่นั่ง</string>
+    <!-- AB test variate 2 - Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat_variate2">ทารกนั่งที่นั่ง</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">สายการบินอาจปฏิเสธการขึ้นเครื่องหากชื่อผู้เดินทางไม่ตรงกับบัตรประจำตัวที่มีรูปถ่ายที่ทางราชการออกให้</string>
 
@@ -2689,6 +2718,8 @@
     <string name="included_in_the_price">รวมอยู่ในราคา</string>
     <!-- Not included in the price -->
     <string name="not_included_in_the_price">ยังไม่รวมอยู่ในราคา</string>
+    <!-- View Room button text -->
+    <string name="view_room_button_text">ดูห้องพัก</string>
 
     <!-- Renovation Notice -->
     <string name="renovation_notice">ประกาศการปรับปรุงพื้นที่</string>
@@ -2752,8 +2783,6 @@
     <string name="sign_in">เข้าสู่ระบบ</string>
     <!-- Sign in blurb: descriptive second line of text on sign in button on larger screens -->
     <string name="Earn_points_and_book_fast">รับคะแนนสะสมและจองได้เร็วยิ่งขึ้น</string>
-    <!-- Hint for user to enter password into a field -->
-    <string name="hint_password">รหัสผ่าน</string>
     <!-- Progress dialog text when we are signing the user into Expedia -->
     <string name="signing_in">กำลังเข้าสู่ระบบ…</string>
     <!-- Message that tells user they failed to sign in -->
@@ -2766,14 +2795,8 @@
     <string name="Expedia_plus_silver">Expedia +silver</string>
     <!-- Label for Expedia +gold rewards program name -->
     <string name="Expedia_plus_gold">Expedia +gold</string>
-    <!-- Label for signin screen -->
-    <string name="account_TEMPLATE">บัญชี {brand}</string>
     <!-- Label for loading user profile from Expedia -->
     <string name="loading_brand_account_TEMPLATE">กำลังโหลดบัญชี {brand}</string>
-    <!-- Label for password recovery -->
-    <string name="forgot_your_password">ลืมรหัสผ่าน</string>
-    <!-- Webview title for password recovery -->
-    <string name="title_forgot_password">ลืมรหัสผ่าน</string>
     <!-- Label for coupon code area of booking form -->
     <string name="coupon_code">ป้อนรหัสคูปองหรือรหัสโปรโมชั่น</string>
     <!-- Label for coupon code hint -->
@@ -3483,9 +3506,6 @@
     <string name="cd_checkout_select_payment">กดเพื่อเลือกวิธีการชำระเงินสำหรับการจองนี้</string>
     <!-- Content description for action: Press to enter a coupon or promotional code -->
     <string name="cd_checkout_enter_coupon">กดเพื่อใส่รหัสคูปองหรือรหัสส่วนลด</string>
-    <!-- Sign in screen -->
-    <!-- Content description for action: Press to sign in to Expedia with your Facebook account -->
-    <string name="cd_sign_into_brand_with_your_facebook_account_TEMPLATE">โปรดเข้าสู่ระบบ {brand} ด้วยบัญชี Facebook ของคุณ</string>
     <!-- Traveler Information screen -->
     <!-- Content description for action: Press to enter a new traveler -->
     <string name="cd_traveler_enter_new_traveler">กดเพื่อเพิ่มผู้เดินทางคนใหม่</string>
@@ -3580,7 +3600,5 @@
     <string name="child_age_label">โปรดระบุอายุเด็ก</string>
 
     <string name="lob_not_supported_error_message">ขออภัย การจอง{lob}ยังไม่มีให้บริการในตำแหน่งของคุณ</string>
-    <string name="acct_Create_an_Expedia_account">สร้างบัญชีเอ็กซ์พีเดีย</string>
-    <string name="acct_Welcome_to_Expedia">ยินดีต้อนรับสู่เอ็กซ์พีเดีย</string>
 
 </resources>
