--- a/project/src/main/res/values-da/strings.xml
+++ b/project/src/main/res/values-da/strings.xml
@@ -266,7 +266,7 @@
     <!-- Template for multiple duration text on Search results Eg: 2d+ -->
     <string name="search_result_multiple_duration_TEMPLATE">%1$s +</string>
     <!-- Cancellation policy template -->
-    <string name="cancellation_policy_TEMPLATE">Det er gratis at afbestille frem til %1$s før, aktiviteten begynder. Efter det tidspunkt kan der ikke foretages afbestillinger, ændringer eller refusioner.</string>
+    <string name="lx_cancellation_policy_TEMPLATE">Det er gratis at afbestille frem til {hours} timer, før din aktivitet starter. Efter det tidspunkt kan der ikke foretages afbestillinger, ændringer eller refusioner.</string>
     <!-- Cancellation policy text for non-cancellable activities -->
     <string name="lx_policy_non_cancellable">Denne reservation kan ikke refunderes, ændres eller afbestilles.</string>
     <!-- LX checkout cost breakdown total due today -->
@@ -712,8 +712,6 @@
         <item quantity="other">Komponenter i denne rejseplan</item>
     </plurals>
 
-    <!-- LX Sort & Filter "Apply" header -->
-    <string name="lx_apply_sort_filter">Anvend</string>
     <!-- LX Sort & Filter "Sort By" section header -->
     <string name="lx_sort_by">Sorter efter</string>
     <!-- LX Sort & Filter "Categories" header -->
@@ -874,32 +872,23 @@
     <string name="unable_to_sign_into_facebook">Kan ikke logge på Facebook.</string>
     <!-- Sign failed try again. Note: the text "Country setting" is referring to the option from the settings page that is titled "Country" in the English translation. -->
     <string name="sign_in_failed_try_again">Login-forsøget mislykkedes. Hvis din e-mail og adgangskode er korrekte, bedes du kontrollere, om indstillingen for land i din app er korrekt.</string>
-    <!-- User needs to reset password -->
-    <string name="sign_in_reset_password_TEMPLATE">Du bedes oprette et nyt, universelt login, som du kan bruge på alle {brand}s hjemmesider.&lt;br&gt;Nulstil din adgangskode ved at klikke på linket ‘Har du glemt din adgangskode\&apos;? nedenfor.</string>
     <!-- Facebook connect password hint -->
     <string name="brand_password_hint_TEMPLATE">Adgangskode til {brand}</string>
     <!-- Link accounts -->
     <string name="link_accounts">Forbind kontoer</string>
-    <!-- Failure to update the user -->
-    <string name="failure_to_update_user">Kunne ikke hente opdaterede brugeroplysninger.</string>
-    <!-- User Denied email permission try again button text -->
-    <string name="authorize_email_facebook_button">Giv e-mailtilladelse</string>
     <!-- User Denied email permission Heading -->
     <string name="user_denied_permission_email_heading">E-mailtilladelse</string>
-    <!-- User Denied email permission re-request message -->
-    <string name="user_denied_permission_email_message_TEMPLATE">For at logge på med Facebook har vi brug for din tilladelse til at verificere din e-mailadresse. \n\nTryk på Facebook-knappen nedenfor for at give {brand} tilladelse til at verificere din e-mailadresse. Tak!</string>
     <!-- Linking your accounts -->
     <string name="linking_your_accounts">Forbinder dine kontoer…</string>
-    <!-- Sign In -->
-    <string name="Sign_In">Log på</string>
+    <!-- User Denied email permission try again button text -->
+    <string name="authorize_email_facebook_button">Giv e-mailtilladelse</string>
+    <!-- User Denied email permission re-request message -->
+    <string name="user_denied_permission_email_message_TEMPLATE">For at logge på med Facebook har vi brug for din tilladelse til at verificere din e-mailadresse. \n\nTryk på Facebook-knappen nedenfor for at give {brand} tilladelse til at verificere din e-mailadresse. Tak!</string>
+
     <!-- Sign in with Expedia -->
     <string name="Sign_in_with_TEMPLATE">Log på med {brand}</string>
-    <!-- Sign in with the current brand -->
-    <string name="sign_in_with_brand_TEMPLATE">Log på med {brand}</string>
     <!-- or -->
     <string name="or">eller</string>
-    <!-- Already signed in -->
-    <string name="already_signed_in">Allerede logget på</string>
 
     <!-- Restricted Profile -->
     <!-- Restricted profile sign in message -->
@@ -1717,6 +1706,12 @@
     <string name="select_payment">Vælg betaling</string>
     <!-- Select payment sentence case -->
     <string name="select_payment_sentence_case">Betalingsoplysninger</string>
+    <!-- Select payment sentence case AB Test variate1 -->
+    <string name="select_payment_sentence_case_variate1">Indtast betalingsoplysninger</string>
+    <!-- Select payment sentence case AB Test variate2 -->
+    <string name="select_payment_sentence_case_variate2">Betaling</string>
+    <!-- Select payment callout AB Test variate2 -->
+    <string name="select_payment_callout">Indtast oplysninger</string>
     <!-- Add new card -->
     <string name="add_new_card">Tilføj nyt kort</string>
     <!-- Overview button -->
@@ -1811,6 +1806,10 @@
     <string name="menu_checkout">Til kassen</string>
     <!-- Our best price gaurentee string -->
     <string name="best_price_guarantee">Prisgaranti</string>
+    <!-- Label for address of hotel in checkout/receipt screen-->
+    <string name="hotel_receipt_address">Adresse:</string>
+    <!-- Label to view map of hotel in checkout/receipt screen-->
+    <string name="hotel_receipt_view_map">Vis kort</string>
     <!-- Expedia Rate - Non merchant default infosite messaging -->
     <string name="non_merchant_rate_TEMPLATE">{brand}-pris</string>
     <!-- Free cancellation template string where we insert the date the free cancellation expires -->
@@ -1851,6 +1850,8 @@
     <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">Den samlede pris for din rejse, inklusive resortgebyret på &lt;b&gt;%1$s&lt;/b&gt;, er &lt;b&gt;%2$s&lt;/b&gt;. Du betaler det resterende beløb for din reservation på hotellet (i hotellets lokale valuta) under dit ophold.</string>
     <!-- Flights AB Test Free Cancellation-->
     <string name="ab_test_flights_free_cancellation">Gratis afbestilling inden for 24 timer</string>
+    <!-- Flights AB Test Traveler info missing callout label -->
+    <string name="ab_test_flights_missing_info_callout">Indtast oplysninger om rejsende</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -1907,20 +1908,48 @@
     <string name="guest_details">Oplysninger om gæst</string>
     <!-- Add adult traveler number template -->
     <string name="add_adult_number_TEMPLATE">Oplysninger for voksen %1$s</string>
+    <!-- AB test variate 1 - Add adult traveler number template -->
+    <string name="add_adult_number_variate1_TEMPLATE">Indtast oplysninger for voksen %1$s</string>
+    <!-- AB test variate 2 - Add adult traveler number template -->
+    <string name="add_adult_number_variate2_TEMPLATE">Voksen %1$s</string>
     <!-- Add adult traveler details label -->
     <string name="add_adult">Oplysninger for voksen</string>
+    <!-- AB test variate 1 - Add adult traveler details label -->
+    <string name="add_adult_variate1">Indtast oplysninger for voksen</string>
+    <!-- AB test variate 2 - Add adult traveler details label -->
+    <string name="add_adult_variate2">Voksen</string>
     <!-- Add child traveler number template -->
     <string name="add_child_number_TEMPLATE">Oplysninger for barn %1$s</string>
     <!-- Add child traveler number template. We need to show the age of each child passenger -->
     <string name="add_child_with_age_TEMPLATE">Oplysninger for barn på %1$s</string>
+    <!-- AB test variate 1 - Add child traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_variate1_TEMPLATE">Indtast oplysninger for barn på %1$s</string>
+    <!-- Add child variate 2 - traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_variate2_TEMPLATE">Barn på %1$s</string>
     <!-- Add infant in lap traveler number template -->
     <string name="add_infant_in_lap_number_TEMPLATE">Oplysninger for spædbarn %1$s på skødet</string>
+    <!-- AB test variate 1 - Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_variate1_TEMPLATE">Indtast oplysninger for spædbarn %1$s på skødet</string>
+    <!-- AB test variate 2 - Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_variate2_TEMPLATE">Spædbarn %1$s på skødet</string>
     <!-- Add just one infant in lap, travelers checkout screen -->
     <string name="add_infant_in_lap">Oplysninger for spædbarn på skødet</string>
+    <!-- Ab test variate 1 - Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap_variate1">Indtast oplysninger for spædbarn på skødet</string>
+    <!-- Ab test variate 2 - Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap_variate2">Spædbarn på skødet</string>
     <!-- Add infant in seat traveler number template -->
     <string name="add_infant_in_seat_number_TEMPLATE">Oplysninger for spædbarn %1$s på eget sæde</string>
+    <!-- AB test variate 1- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_variate1_TEMPLATE">Indtast oplysninger for spædbarn %1$s på eget sæde</string>
+    <!-- AB test variate 2- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_variate2_TEMPLATE">Spædbarn %1$s på eget sæde</string>
     <!-- Add just one infant in seat, travelers checkout screen -->
     <string name="add_infant_in_seat">Oplysninger for spædbarn på eget sæde</string>
+    <!-- AB test variate 1 - Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat_variate1">Indtast oplysninger for spædbarn på eget sæde</string>
+    <!-- AB test variate 2 - Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat_variate2">Spædbarn på eget sæde</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">Boarding kan nægtes, hvis den rejsendes navn ikke stemmer overens med det officielle billed-id.</string>
 
@@ -2687,6 +2716,8 @@
     <string name="included_in_the_price">Inkluderet i prisen</string>
     <!-- Not included in the price -->
     <string name="not_included_in_the_price">Ikke inkluderet i prisen</string>
+    <!-- View Room button text -->
+    <string name="view_room_button_text">Se værelse</string>
 
     <!-- Renovation Notice -->
     <string name="renovation_notice">Renoveringsmeddelelse</string>
@@ -2750,8 +2781,6 @@
     <string name="sign_in">Log på</string>
     <!-- Sign in blurb: descriptive second line of text on sign in button on larger screens -->
     <string name="Earn_points_and_book_fast">Optjen point, og book endnu hurtigere.</string>
-    <!-- Hint for user to enter password into a field -->
-    <string name="hint_password">Adgangskode</string>
     <!-- Progress dialog text when we are signing the user into Expedia -->
     <string name="signing_in">Logger på…</string>
     <!-- Message that tells user they failed to sign in -->
@@ -2764,14 +2793,8 @@
     <string name="Expedia_plus_silver">Expedia +silver</string>
     <!-- Label for Expedia +gold rewards program name -->
     <string name="Expedia_plus_gold">Expedia +gold</string>
-    <!-- Label for signin screen -->
-    <string name="account_TEMPLATE">{brand}-konto</string>
     <!-- Label for loading user profile from Expedia -->
     <string name="loading_brand_account_TEMPLATE">Indlæser {brand}-konto</string>
-    <!-- Label for password recovery -->
-    <string name="forgot_your_password">Har du glemt din adgangskode?</string>
-    <!-- Webview title for password recovery -->
-    <string name="title_forgot_password">Glemt adgangskode</string>
     <!-- Label for coupon code area of booking form -->
     <string name="coupon_code">Indtast en kupon eller kampagnekode</string>
     <!-- Label for coupon code hint -->
@@ -3481,9 +3504,6 @@
     <string name="cd_checkout_select_payment">Tryk for at vælge betaling for denne reservation</string>
     <!-- Content description for action: Press to enter a coupon or promotional code -->
     <string name="cd_checkout_enter_coupon">Tryk for at indtaste en kupon- eller kampagnekode</string>
-    <!-- Sign in screen -->
-    <!-- Content description for action: Press to sign in to Expedia with your Facebook account -->
-    <string name="cd_sign_into_brand_with_your_facebook_account_TEMPLATE">Tryk for at logge på {brand} med din Facebook-konto</string>
     <!-- Traveler Information screen -->
     <!-- Content description for action: Press to enter a new traveler -->
     <string name="cd_traveler_enter_new_traveler">Tryk for at indtaste en ny rejsende</string>
@@ -3578,7 +3598,5 @@
     <string name="child_age_label">Vælg hvert barns alder</string>
 
     <string name="lob_not_supported_error_message">Beklager, men reservation af {lob} er endnu ikke tilgængelig, der hvor du befinder dig.</string>
-    <string name="acct_Create_an_Expedia_account">Opret en Expedia-konto</string>
-    <string name="acct_Welcome_to_Expedia">Velkommen til Expedia</string>
 
 </resources>
