--- a/project/src/main/res/values-de/strings.xml
+++ b/project/src/main/res/values-de/strings.xml
@@ -266,7 +266,7 @@
     <!-- Template for multiple duration text on Search results Eg: 2d+ -->
     <string name="search_result_multiple_duration_TEMPLATE">%1$s +</string>
     <!-- Cancellation policy template -->
-    <string name="cancellation_policy_TEMPLATE">Bis %1$s vor dem Startzeitpunkt Ihrer Reservierung können Sie kostenlos stornieren. Anschließend sind keine Stornierungen, Änderungen und Erstattungen mehr möglich.</string>
+    <string name="lx_cancellation_policy_TEMPLATE">Eine Stornierung ist bis zu {hours} Stunden vor Reservierungsbeginn kostenlos möglich. Danach können keine Stornierungen, Änderungen und Erstattungen mehr durchgeführt werden.</string>
     <!-- Cancellation policy text for non-cancellable activities -->
     <string name="lx_policy_non_cancellable">Diese Reservierung ist nicht erstattungsfähig und kann nach der Buchung nicht umgebucht oder storniert werden.</string>
     <!-- LX checkout cost breakdown total due today -->
@@ -712,8 +712,6 @@
         <item quantity="other">Produkte im Reiseplan</item>
     </plurals>
 
-    <!-- LX Sort & Filter "Apply" header -->
-    <string name="lx_apply_sort_filter">Einlösen</string>
     <!-- LX Sort & Filter "Sort By" section header -->
     <string name="lx_sort_by">Sortieren nach</string>
     <!-- LX Sort & Filter "Categories" header -->
@@ -874,32 +872,23 @@
     <string name="unable_to_sign_into_facebook">Die Anmeldung bei Facebook hat nicht geklappt.</string>
     <!-- Sign failed try again. Note: the text "Country setting" is referring to the option from the settings page that is titled "Country" in the English translation. -->
     <string name="sign_in_failed_try_again">Anmeldung fehlgeschlagen. Wenn Ihre E-Mail-Adresse und Ihr Passwort korrekt sind, überprüfen Sie bitte die Ländereinstellungen der App.</string>
-    <!-- User needs to reset password -->
-    <string name="sign_in_reset_password_TEMPLATE">Bitte erstellen Sie ein neues, globales Benutzerkonto für alle {brand}-Websites.&lt;br&gt;Bitte setzen Sie über den Link \&apos;Passwort vergessen?\&apos; weiter unten Ihr Passwort zurück.</string>
     <!-- Facebook connect password hint -->
     <string name="brand_password_hint_TEMPLATE">{brand}-Passwort</string>
     <!-- Link accounts -->
     <string name="link_accounts">Konten verknüpfen</string>
-    <!-- Failure to update the user -->
-    <string name="failure_to_update_user">Die aktualisierten Benutzerdaten konnten nicht abgerufen werden.</string>
-    <!-- User Denied email permission try again button text -->
-    <string name="authorize_email_facebook_button">E-Mail-Genehmigung erteilen</string>
     <!-- User Denied email permission Heading -->
     <string name="user_denied_permission_email_heading">E-Mail-Genehmigung</string>
-    <!-- User Denied email permission re-request message -->
-    <string name="user_denied_permission_email_message_TEMPLATE">Für eine Anmeldung über Facebook brauchen wir Ihre Erlaubnis, um Ihre E-Mail-Adresse zu verifizieren. \n\nBitte tippen Sie unten auf die Facebook-Schaltfläche, um {brand} die Genehmigung zu erteilen, Ihre E-Mail-Adresse zu verifizieren. Vielen Dank!</string>
     <!-- Linking your accounts -->
     <string name="linking_your_accounts">Ihre Konten werden verknüpft…</string>
-    <!-- Sign In -->
-    <string name="Sign_In">Anmelden</string>
+    <!-- User Denied email permission try again button text -->
+    <string name="authorize_email_facebook_button">E-Mail-Genehmigung erteilen</string>
+    <!-- User Denied email permission re-request message -->
+    <string name="user_denied_permission_email_message_TEMPLATE">Für eine Anmeldung über Facebook brauchen wir Ihre Erlaubnis, um Ihre E-Mail-Adresse zu verifizieren. \n\nBitte tippen Sie unten auf die Facebook-Schaltfläche, um {brand} die Genehmigung zu erteilen, Ihre E-Mail-Adresse zu verifizieren. Vielen Dank!</string>
+
     <!-- Sign in with Expedia -->
     <string name="Sign_in_with_TEMPLATE">Bei {brand} anmelden</string>
-    <!-- Sign in with the current brand -->
-    <string name="sign_in_with_brand_TEMPLATE">Bei {brand} anmelden</string>
     <!-- or -->
     <string name="or">oder</string>
-    <!-- Already signed in -->
-    <string name="already_signed_in">Bereits angemeldet</string>
 
     <!-- Restricted Profile -->
     <!-- Restricted profile sign in message -->
@@ -1717,6 +1706,12 @@
     <string name="select_payment">Zahlungsart auswählen</string>
     <!-- Select payment sentence case -->
     <string name="select_payment_sentence_case">Zahlungsdetails</string>
+    <!-- Select payment sentence case AB Test variate1 -->
+    <string name="select_payment_sentence_case_variate1">Zahlungsdetails eingeben</string>
+    <!-- Select payment sentence case AB Test variate2 -->
+    <string name="select_payment_sentence_case_variate2">Zahlung</string>
+    <!-- Select payment callout AB Test variate2 -->
+    <string name="select_payment_callout">Details eingeben</string>
     <!-- Add new card -->
     <string name="add_new_card">Neue Karte hinzufügen</string>
     <!-- Overview button -->
@@ -1811,6 +1806,10 @@
     <string name="menu_checkout">Buchen</string>
     <!-- Our best price gaurentee string -->
     <string name="best_price_guarantee">Bestpreisgarantie</string>
+    <!-- Label for address of hotel in checkout/receipt screen-->
+    <string name="hotel_receipt_address">Adresse:</string>
+    <!-- Label to view map of hotel in checkout/receipt screen-->
+    <string name="hotel_receipt_view_map">Karte anzeigen</string>
     <!-- Expedia Rate - Non merchant default infosite messaging -->
     <string name="non_merchant_rate_TEMPLATE">{brand}-Preis</string>
     <!-- Free cancellation template string where we insert the date the free cancellation expires -->
@@ -1851,6 +1850,8 @@
     <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">Der Gesamtpreis Ihrer Reise, inklusive einer Hotelgebühr von &lt;b&gt;%1$s&lt;/b&gt;, beträgt &lt;b&gt;%2$s&lt;/b&gt;. Sie bezahlen vor Ort im Hotel den Restbetrag Ihrer Buchung (in der Landeswährung des Hotels).</string>
     <!-- Flights AB Test Free Cancellation-->
     <string name="ab_test_flights_free_cancellation">Kostenlose Stornierung innerhalb von 24 Stunden</string>
+    <!-- Flights AB Test Traveler info missing callout label -->
+    <string name="ab_test_flights_missing_info_callout">Angaben zum Reisenden eingeben</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -1907,20 +1908,48 @@
     <string name="guest_details">Gästedetails</string>
     <!-- Add adult traveler number template -->
     <string name="add_adult_number_TEMPLATE">Angaben zum %1$s. Erwachsenen</string>
+    <!-- AB test variate 1 - Add adult traveler number template -->
+    <string name="add_adult_number_variate1_TEMPLATE">Angaben zum %1$s. Erwachsenen eingeben</string>
+    <!-- AB test variate 2 - Add adult traveler number template -->
+    <string name="add_adult_number_variate2_TEMPLATE">%1$s. Erwachsener</string>
     <!-- Add adult traveler details label -->
-    <string name="add_adult">Angaben zum . Erwachsenen</string>
+    <string name="add_adult">Angaben zum Erwachsenen</string>
+    <!-- AB test variate 1 - Add adult traveler details label -->
+    <string name="add_adult_variate1">Angaben zum Erwachsenen eingeben</string>
+    <!-- AB test variate 2 - Add adult traveler details label -->
+    <string name="add_adult_variate2">Erwachsener</string>
     <!-- Add child traveler number template -->
     <string name="add_child_number_TEMPLATE">Angaben zum %1$s. Kind</string>
     <!-- Add child traveler number template. We need to show the age of each child passenger -->
     <string name="add_child_with_age_TEMPLATE">Angaben zum %1$s Jahre alten Kind</string>
+    <!-- AB test variate 1 - Add child traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_variate1_TEMPLATE">Angaben zum %1$s Jahre alten Kind eingeben</string>
+    <!-- Add child variate 2 - traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_variate2_TEMPLATE">%1$s Jahre altes Kind</string>
     <!-- Add infant in lap traveler number template -->
     <string name="add_infant_in_lap_number_TEMPLATE">Angaben zum %1$s. Kleinkind auf dem Schoß</string>
+    <!-- AB test variate 1 - Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_variate1_TEMPLATE">Angaben zum %1$s. Kleinkind auf dem Schoß eingeben</string>
+    <!-- AB test variate 2 - Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_variate2_TEMPLATE">%1$s. Kleinkind auf dem Schoß</string>
     <!-- Add just one infant in lap, travelers checkout screen -->
     <string name="add_infant_in_lap">Angaben zum Kleinkind auf dem Schoß</string>
+    <!-- Ab test variate 1 - Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap_variate1">Angaben zum Kleinkind auf dem Schoß eingeben</string>
+    <!-- Ab test variate 2 - Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap_variate2">Kleinkind auf dem Schoß</string>
     <!-- Add infant in seat traveler number template -->
-    <string name="add_infant_in_seat_number_TEMPLATE">Angaben zum %1$s. Kleinkind auf einem Sitzplatz</string>
+    <string name="add_infant_in_seat_number_TEMPLATE">Angaben zum %1$s. Kleinkind auf eigenem Sitzplatz</string>
+    <!-- AB test variate 1- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_variate1_TEMPLATE">Angaben zum %1$s. Kleinkind auf eigenem Sitzplatz eingeben</string>
+    <!-- AB test variate 2- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_variate2_TEMPLATE">%1$s Kleinkind auf eigenem Sitzplatz</string>
     <!-- Add just one infant in seat, travelers checkout screen -->
-    <string name="add_infant_in_seat">Angaben zum Kleinkind auf einem Sitzplatz</string>
+    <string name="add_infant_in_seat">Angaben zum Kleinkind auf eigenem Sitzplatz</string>
+    <!-- AB test variate 1 - Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat_variate1">Angaben zum Kleinkind auf eigenem Sitzplatz eingeben</string>
+    <!-- AB test variate 2 - Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat_variate2">Kleinkind auf eigenem Sitzplatz</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">Wenn der Name des Reisenden nicht mit dem Namen im Lichtbildausweis übereinstimmt, kann das Boarding verwehrt werden.</string>
 
@@ -2688,6 +2717,8 @@
     <string name="included_in_the_price">Im Preis inbegriffen</string>
     <!-- Not included in the price -->
     <string name="not_included_in_the_price">Nicht im Preis inbegriffen</string>
+    <!-- View Room button text -->
+    <string name="view_room_button_text">Zimmer ansehen</string>
 
     <!-- Renovation Notice -->
     <string name="renovation_notice">Renovierungshinweis</string>
@@ -2751,8 +2782,6 @@
     <string name="sign_in">Anmelden</string>
     <!-- Sign in blurb: descriptive second line of text on sign in button on larger screens -->
     <string name="Earn_points_and_book_fast">Sammeln Sie Punkte und buchen Sie noch schneller!</string>
-    <!-- Hint for user to enter password into a field -->
-    <string name="hint_password">Passwort</string>
     <!-- Progress dialog text when we are signing the user into Expedia -->
     <string name="signing_in">Anmeldung erfolgt…</string>
     <!-- Message that tells user they failed to sign in -->
@@ -2765,14 +2794,8 @@
     <string name="Expedia_plus_silver">Expedia +silver</string>
     <!-- Label for Expedia +gold rewards program name -->
     <string name="Expedia_plus_gold">Expedia +gold</string>
-    <!-- Label for signin screen -->
-    <string name="account_TEMPLATE">{brand}-Konto</string>
     <!-- Label for loading user profile from Expedia -->
     <string name="loading_brand_account_TEMPLATE">{brand}-Konto wird geladen</string>
-    <!-- Label for password recovery -->
-    <string name="forgot_your_password">Passwort vergessen?</string>
-    <!-- Webview title for password recovery -->
-    <string name="title_forgot_password">Passwort vergessen?</string>
     <!-- Label for coupon code area of booking form -->
     <string name="coupon_code">Gutschein- oder Angebotscode eingeben</string>
     <!-- Label for coupon code hint -->
@@ -3482,9 +3505,6 @@
     <string name="cd_checkout_select_payment">Zahlungsart auswählen</string>
     <!-- Content description for action: Press to enter a coupon or promotional code -->
     <string name="cd_checkout_enter_coupon">Gutschein- oder Angebotscode eingeben</string>
-    <!-- Sign in screen -->
-    <!-- Content description for action: Press to sign in to Expedia with your Facebook account -->
-    <string name="cd_sign_into_brand_with_your_facebook_account_TEMPLATE">Über Facebook bei Ihrem {brand}-Konto anmelden</string>
     <!-- Traveler Information screen -->
     <!-- Content description for action: Press to enter a new traveler -->
     <string name="cd_traveler_enter_new_traveler">Neuen Reisenden hinzufügen</string>
@@ -3579,7 +3599,5 @@
     <string name="child_age_label">Geben Sie das Alter jedes Kindes an</string>
 
     <string name="lob_not_supported_error_message">Leider können {lob} an Ihrem Standort noch nicht mobil gebucht werden.</string>
-    <string name="acct_Create_an_Expedia_account">Expedia-Konto erstellen</string>
-    <string name="acct_Welcome_to_Expedia">Willkommen bei Expedia</string>
 
 </resources>
