--- a/project/src/main/res/values-es/strings.xml
+++ b/project/src/main/res/values-es/strings.xml
@@ -266,7 +266,7 @@
     <!-- Template for multiple duration text on Search results Eg: 2d+ -->
     <string name="search_result_multiple_duration_TEMPLATE">%1$s +</string>
     <!-- Cancellation policy template -->
-    <string name="cancellation_policy_TEMPLATE">La cancelación es gratuita hasta %1$s antes del inicio de la reservación. Después de ese límite, no se harán cancelaciones, cambios ni reembolsos.</string>
+    <string name="lx_cancellation_policy_TEMPLATE">La cancelación es gratuita hasta {hours} horas antes del inicio de la reservación. Después de ese límite, no se harán cancelaciones, cambios ni reembolsos.</string>
     <!-- Cancellation policy text for non-cancellable activities -->
     <string name="lx_policy_non_cancellable">Esta reservación es no reembolsable y no puede cambiarse ni cancelarse una vez hecha.</string>
     <!-- LX checkout cost breakdown total due today -->
@@ -712,8 +712,6 @@
         <item quantity="other">Elementos en el viaje</item>
     </plurals>
 
-    <!-- LX Sort & Filter "Apply" header -->
-    <string name="lx_apply_sort_filter">Aplicar</string>
     <!-- LX Sort & Filter "Sort By" section header -->
     <string name="lx_sort_by">Ordenar por</string>
     <!-- LX Sort & Filter "Categories" header -->
@@ -874,32 +872,23 @@
     <string name="unable_to_sign_into_facebook">No pudimos iniciar tu sesión en Facebook.</string>
     <!-- Sign failed try again. Note: the text "Country setting" is referring to the option from the settings page that is titled "Country" in the English translation. -->
     <string name="sign_in_failed_try_again">Falló el inicio de sesión. Si tu correo electrónico y tu contraseña son correctos, confirma que la configuración del país de tu aplicación sea la correcta.</string>
-    <!-- User needs to reset password -->
-    <string name="sign_in_reset_password_TEMPLATE">Necesitamos que crees un nuevo inicio de sesión internacional para todos los sitios de {brand}.&lt;br&gt;Restablece tu contraseña utilizando el vínculo \&apos;¿Se te olvidó tu contraseña?\&apos; a continuación.</string>
     <!-- Facebook connect password hint -->
     <string name="brand_password_hint_TEMPLATE">Contraseña de {brand}</string>
     <!-- Link accounts -->
     <string name="link_accounts">Vincular cuentas</string>
-    <!-- Failure to update the user -->
-    <string name="failure_to_update_user">No se pudo extraer la información actualizada del usuario.</string>
-    <!-- User Denied email permission try again button text -->
-    <string name="authorize_email_facebook_button">Autorizar permiso de verificación de correo electrónico</string>
     <!-- User Denied email permission Heading -->
     <string name="user_denied_permission_email_heading">Permiso de verificación de correo electrónico</string>
-    <!-- User Denied email permission re-request message -->
-    <string name="user_denied_permission_email_message_TEMPLATE">Para iniciar sesión con Facebook, necesitamos tu autorización para verificar tu dirección de correo electrónico. \n\nPresiona el botón de Facebook a continuación para autorizar a {brand} la verificación de tu dirección de correo electrónico. Gracias.</string>
     <!-- Linking your accounts -->
     <string name="linking_your_accounts">Estamos vinculando tus cuentas…</string>
-    <!-- Sign In -->
-    <string name="Sign_In">Iniciar sesión</string>
+    <!-- User Denied email permission try again button text -->
+    <string name="authorize_email_facebook_button">Autorizar permiso de verificación de correo electrónico</string>
+    <!-- User Denied email permission re-request message -->
+    <string name="user_denied_permission_email_message_TEMPLATE">Para iniciar sesión con Facebook, necesitamos tu autorización para verificar tu dirección de correo electrónico. \n\nPresiona el botón de Facebook a continuación para autorizar a {brand} la verificación de tu dirección de correo electrónico. Gracias.</string>
+
     <!-- Sign in with Expedia -->
     <string name="Sign_in_with_TEMPLATE">Inicia sesión con {brand}</string>
-    <!-- Sign in with the current brand -->
-    <string name="sign_in_with_brand_TEMPLATE">Inicia sesión con {brand}</string>
     <!-- or -->
     <string name="or">o</string>
-    <!-- Already signed in -->
-    <string name="already_signed_in">Ya inicié sesión</string>
 
     <!-- Restricted Profile -->
     <!-- Restricted profile sign in message -->
@@ -1717,6 +1706,12 @@
     <string name="select_payment">Seleccionar el pago</string>
     <!-- Select payment sentence case -->
     <string name="select_payment_sentence_case">Detalles del pago</string>
+    <!-- Select payment sentence case AB Test variate1 -->
+    <string name="select_payment_sentence_case_variate1">Ingresa los detalles del pago</string>
+    <!-- Select payment sentence case AB Test variate2 -->
+    <string name="select_payment_sentence_case_variate2">Pago</string>
+    <!-- Select payment callout AB Test variate2 -->
+    <string name="select_payment_callout">Ingresar los detalles</string>
     <!-- Add new card -->
     <string name="add_new_card">Ingresar una tarjeta nueva</string>
     <!-- Overview button -->
@@ -1811,6 +1806,10 @@
     <string name="menu_checkout">Completar</string>
     <!-- Our best price gaurentee string -->
     <string name="best_price_guarantee">Garantía del mejor precio</string>
+    <!-- Label for address of hotel in checkout/receipt screen-->
+    <string name="hotel_receipt_address">Dirección:</string>
+    <!-- Label to view map of hotel in checkout/receipt screen-->
+    <string name="hotel_receipt_view_map">Ver mapa</string>
     <!-- Expedia Rate - Non merchant default infosite messaging -->
     <string name="non_merchant_rate_TEMPLATE">Tarifa de {brand}</string>
     <!-- Free cancellation template string where we insert the date the free cancellation expires -->
@@ -1851,6 +1850,8 @@
     <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">El total de tu viaje, incluido el cargo del resort de &lt;b&gt;%1$s&lt;/b&gt;, será de &lt;b&gt;%2$s&lt;/b&gt;. Pagarás el saldo de tu reservación de hotel (en la moneda local del hotel) durante tu estadía.</string>
     <!-- Flights AB Test Free Cancellation-->
     <string name="ab_test_flights_free_cancellation">Cancelación gratuita dentro de un plazo de 24 horas</string>
+    <!-- Flights AB Test Traveler info missing callout label -->
+    <string name="ab_test_flights_missing_info_callout">Ingresa los detalles del pasajero</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -1904,23 +1905,51 @@
     <!-- Add new card, checkout saved credit cards list -->
     <string name="add_new_creditcard">Ingresar una tarjeta nueva</string>
     <!-- Add Guest for hotels -->
-    <string name="guest_details">Detalles del huésped</string>
+    <string name="guest_details">Información del huésped</string>
     <!-- Add adult traveler number template -->
-    <string name="add_adult_number_TEMPLATE">Detalles del adulto %1$s</string>
+    <string name="add_adult_number_TEMPLATE">Información del adulto %1$s</string>
+    <!-- AB test variate 1 - Add adult traveler number template -->
+    <string name="add_adult_number_variate1_TEMPLATE">Ingresa la información del adulto %1$s</string>
+    <!-- AB test variate 2 - Add adult traveler number template -->
+    <string name="add_adult_number_variate2_TEMPLATE">Adulto %1$s</string>
     <!-- Add adult traveler details label -->
-    <string name="add_adult">Detalles del adulto</string>
+    <string name="add_adult">Información del adulto</string>
+    <!-- AB test variate 1 - Add adult traveler details label -->
+    <string name="add_adult_variate1">Ingresa la información del adulto</string>
+    <!-- AB test variate 2 - Add adult traveler details label -->
+    <string name="add_adult_variate2">Adulto</string>
     <!-- Add child traveler number template -->
-    <string name="add_child_number_TEMPLATE">Detalles del niño %1$s</string>
+    <string name="add_child_number_TEMPLATE">Información del niño %1$s</string>
     <!-- Add child traveler number template. We need to show the age of each child passenger -->
-    <string name="add_child_with_age_TEMPLATE">Detalles del niño de %1$s años</string>
+    <string name="add_child_with_age_TEMPLATE">Información del niño de %1$s años</string>
+    <!-- AB test variate 1 - Add child traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_variate1_TEMPLATE">Ingresa la información del niño de %1$s años</string>
+    <!-- Add child variate 2 - traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_variate2_TEMPLATE">%1$s años</string>
     <!-- Add infant in lap traveler number template -->
-    <string name="add_infant_in_lap_number_TEMPLATE">Detalles del niño que viaja en el regazo %1$s</string>
+    <string name="add_infant_in_lap_number_TEMPLATE">Información del niño que viaja en el regazo %1$s</string>
+    <!-- AB test variate 1 - Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_variate1_TEMPLATE">Ingresa la información del niño que viaja en el regazo %1$s</string>
+    <!-- AB test variate 2 - Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_variate2_TEMPLATE">Niño que viaja en el regazo %1$s</string>
     <!-- Add just one infant in lap, travelers checkout screen -->
-    <string name="add_infant_in_lap">Detalles del niño que viaja en el regazo</string>
+    <string name="add_infant_in_lap">Información del niño que viaja en el regazo</string>
+    <!-- Ab test variate 1 - Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap_variate1">Ingresa la información del niño que viaja en el regazo</string>
+    <!-- Ab test variate 2 - Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap_variate2">Niño que viaja en el regazo</string>
     <!-- Add infant in seat traveler number template -->
-    <string name="add_infant_in_seat_number_TEMPLATE">Detalles del niño que viaja en un asiento %1$s</string>
+    <string name="add_infant_in_seat_number_TEMPLATE">Información del niño que viaja en un asiento %1$s</string>
+    <!-- AB test variate 1- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_variate1_TEMPLATE">Ingresa la información del niño que viaja en un asiento %1$s</string>
+    <!-- AB test variate 2- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_variate2_TEMPLATE">Niño que viaja en un asiento %1$s</string>
     <!-- Add just one infant in seat, travelers checkout screen -->
-    <string name="add_infant_in_seat">Detalles del niño que viaja en un asiento</string>
+    <string name="add_infant_in_seat">Información del niño que viaja en un asiento</string>
+    <!-- AB test variate 1 - Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat_variate1">Ingresa la información del niño que viaja en un asiento</string>
+    <!-- AB test variate 2 - Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat_variate2">Niño que viaja en un asiento</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">Es posible que se rechace el embarque si el nombre del pasajero no coincide con el de la identificación oficial con foto emitida por el gobierno.</string>
 
@@ -2687,6 +2716,8 @@
     <string name="included_in_the_price">Incluidos en el precio</string>
     <!-- Not included in the price -->
     <string name="not_included_in_the_price">No incluidos en el precio</string>
+    <!-- View Room button text -->
+    <string name="view_room_button_text">Ver habitación</string>
 
     <!-- Renovation Notice -->
     <string name="renovation_notice">Aviso de remodelación</string>
@@ -2750,8 +2781,6 @@
     <string name="sign_in">Iniciar sesión</string>
     <!-- Sign in blurb: descriptive second line of text on sign in button on larger screens -->
     <string name="Earn_points_and_book_fast">Acumula puntos y reserva rápido.</string>
-    <!-- Hint for user to enter password into a field -->
-    <string name="hint_password">Contraseña</string>
     <!-- Progress dialog text when we are signing the user into Expedia -->
     <string name="signing_in">Iniciando sesión…</string>
     <!-- Message that tells user they failed to sign in -->
@@ -2764,14 +2793,8 @@
     <string name="Expedia_plus_silver">Expedia +silver</string>
     <!-- Label for Expedia +gold rewards program name -->
     <string name="Expedia_plus_gold">Expedia +gold</string>
-    <!-- Label for signin screen -->
-    <string name="account_TEMPLATE">Cuenta de {brand}</string>
     <!-- Label for loading user profile from Expedia -->
     <string name="loading_brand_account_TEMPLATE">Cargando la cuenta de {brand}</string>
-    <!-- Label for password recovery -->
-    <string name="forgot_your_password">¿Se te olvidó tu contraseña?</string>
-    <!-- Webview title for password recovery -->
-    <string name="title_forgot_password">Olvidé mi contraseña</string>
     <!-- Label for coupon code area of booking form -->
     <string name="coupon_code">Ingresa un cupón o un código de promoción</string>
     <!-- Label for coupon code hint -->
@@ -3481,9 +3504,6 @@
     <string name="cd_checkout_select_payment">Presiona aquí para seleccionar una forma de pago para esta reservación</string>
     <!-- Content description for action: Press to enter a coupon or promotional code -->
     <string name="cd_checkout_enter_coupon">Presiona aquí para ingresar un cupón o un código de promoción</string>
-    <!-- Sign in screen -->
-    <!-- Content description for action: Press to sign in to Expedia with your Facebook account -->
-    <string name="cd_sign_into_brand_with_your_facebook_account_TEMPLATE">Presiona aquí para iniciar sesión en {brand} con tu cuenta de Facebook</string>
     <!-- Traveler Information screen -->
     <!-- Content description for action: Press to enter a new traveler -->
     <string name="cd_traveler_enter_new_traveler">Presiona aquí para agregar otro pasajero</string>
@@ -3578,7 +3598,5 @@
     <string name="child_age_label">Selecciona la edad de cada niño</string>
 
     <string name="lob_not_supported_error_message">Lo sentimos, pero todavía no es posible reservar {lob} en tu ubicación.</string>
-    <string name="acct_Create_an_Expedia_account">Crear una cuenta de Expedia</string>
-    <string name="acct_Welcome_to_Expedia">Te damos la bienvenida a Expedia</string>
 
 </resources>
