--- a/project/src/main/res/values-fr-rCA/strings.xml
+++ b/project/src/main/res/values-fr-rCA/strings.xml
@@ -82,7 +82,7 @@
     <!-- Part of the description, showing the itinerary #.  %s is the itinerary number, e.g. "Expedia Itinerary #: 3532532" -->
     <string name="calendar_desc_itinerary_TEMPLATE">Nº d\&apos;itinéraire {brand} : {itinerary}</string>
     <!-- Part of the description, showing a phone # for support.  %1$s is the local phone number and %2$s is for toll free no, e.g. "Expedia Customer Support: 222-222-2222 and 800-321-1111" -->
-    <string name="calendar_desc_support_TEMPLATE">{brand} Soutien à la clientèle : {localphone} et {phone}</string>
+    <string name="calendar_desc_support_TEMPLATE">Soutien à la clientèle {brand} : {localphone} et {phone}</string>
 
     <!-- Label for hotel search toolbar -->
     <string name="hotel_toolbar_title">Rechercher des hôtels</string>
@@ -266,7 +266,7 @@
     <!-- Template for multiple duration text on Search results Eg: 2d+ -->
     <string name="search_result_multiple_duration_TEMPLATE">%1$s +</string>
     <!-- Cancellation policy template -->
-    <string name="cancellation_policy_TEMPLATE">Vous pouvez annuler sans frais jusqu\&apos;à %1$s avant votre réservation. Après quoi aucune annulation, aucun changement ou remboursement ne sera possible.</string>
+    <string name="lx_cancellation_policy_TEMPLATE">Vous pouvez annuler sans frais jusqu\&apos;à {hours} heures avant votre réservation. Après quoi aucune annulation ni aucun changement ou remboursement ne sera possible.</string>
     <!-- Cancellation policy text for non-cancellable activities -->
     <string name="lx_policy_non_cancellable">Cette réservation n\&apos;est pas remboursable et ne pourra pas être modifiée ou annulée une fois confirmée.</string>
     <!-- LX checkout cost breakdown total due today -->
@@ -712,8 +712,6 @@
         <item quantity="other">Éléments du voyage</item>
     </plurals>
 
-    <!-- LX Sort & Filter "Apply" header -->
-    <string name="lx_apply_sort_filter">Appliquer</string>
     <!-- LX Sort & Filter "Sort By" section header -->
     <string name="lx_sort_by">Trier par</string>
     <!-- LX Sort & Filter "Categories" header -->
@@ -874,32 +872,23 @@
     <string name="unable_to_sign_into_facebook">Impossible de se connecter à Facebook.</string>
     <!-- Sign failed try again. Note: the text "Country setting" is referring to the option from the settings page that is titled "Country" in the English translation. -->
     <string name="sign_in_failed_try_again">Échec d\&apos;ouverture de session. Si votre adresse courriel et votre mot de passe sont exacts, vérifiez et confirmez que votre paramètre Pays de l\&apos;application est correct.</string>
-    <!-- User needs to reset password -->
-    <string name="sign_in_reset_password_TEMPLATE">Vous devez créer un nouvel identifiant international vous donnant accès à tous les sites {brand}.&lt;br&gt;Veuillez réinitialiser votre mot de passe à l\&apos;aide du lien « Oublié votre mot de passe? » ci-dessous.</string>
     <!-- Facebook connect password hint -->
     <string name="brand_password_hint_TEMPLATE">{brand}Mot de passe</string>
     <!-- Link accounts -->
     <string name="link_accounts">Lien Comptes</string>
-    <!-- Failure to update the user -->
-    <string name="failure_to_update_user">Échec de recherche d\&apos;information utilisateur mise à jour.</string>
-    <!-- User Denied email permission try again button text -->
-    <string name="authorize_email_facebook_button">Accorder l\&apos;autorisation de courriel</string>
     <!-- User Denied email permission Heading -->
     <string name="user_denied_permission_email_heading">Autorisation de courriel</string>
-    <!-- User Denied email permission re-request message -->
-    <string name="user_denied_permission_email_message_TEMPLATE">Pour ouvrir une session sur Facebook, vous devez nous autoriser à vérifier votre adresse courriel. \n\nVeuillez appuyer sur le bouton Facebook ci-dessous pour autoriser {brand} à vérifier votre adresse courriel. Merci!</string>
     <!-- Linking your accounts -->
     <string name="linking_your_accounts">Connexion de vos comptes…</string>
-    <!-- Sign In -->
-    <string name="Sign_In">Ouvrir une session</string>
+    <!-- User Denied email permission try again button text -->
+    <string name="authorize_email_facebook_button">Accorder l\&apos;autorisation de courriel</string>
+    <!-- User Denied email permission re-request message -->
+    <string name="user_denied_permission_email_message_TEMPLATE">Pour ouvrir une session sur Facebook, vous devez nous autoriser à vérifier votre adresse courriel. \n\nVeuillez appuyer sur le bouton Facebook ci-dessous pour autoriser {brand} à vérifier votre adresse courriel. Merci!</string>
+
     <!-- Sign in with Expedia -->
     <string name="Sign_in_with_TEMPLATE">Ouvrir une session avec {brand}</string>
-    <!-- Sign in with the current brand -->
-    <string name="sign_in_with_brand_TEMPLATE">Ouvrir une session avec {brand}</string>
     <!-- or -->
     <string name="or">ou</string>
-    <!-- Already signed in -->
-    <string name="already_signed_in">Session déjà ouverte</string>
 
     <!-- Restricted Profile -->
     <!-- Restricted profile sign in message -->
@@ -1717,6 +1706,12 @@
     <string name="select_payment">Sélectionner le paiement</string>
     <!-- Select payment sentence case -->
     <string name="select_payment_sentence_case">Détails du paiement</string>
+    <!-- Select payment sentence case AB Test variate1 -->
+    <string name="select_payment_sentence_case_variate1">Entrer les détails du paiement</string>
+    <!-- Select payment sentence case AB Test variate2 -->
+    <string name="select_payment_sentence_case_variate2">Paiement</string>
+    <!-- Select payment callout AB Test variate2 -->
+    <string name="select_payment_callout">Entrer les détails</string>
     <!-- Add new card -->
     <string name="add_new_card">Ajouter une nouvelle carte</string>
     <!-- Overview button -->
@@ -1811,6 +1806,10 @@
     <string name="menu_checkout">Sortie</string>
     <!-- Our best price gaurentee string -->
     <string name="best_price_guarantee">Garantie du meilleur prix</string>
+    <!-- Label for address of hotel in checkout/receipt screen-->
+    <string name="hotel_receipt_address">Adresse :</string>
+    <!-- Label to view map of hotel in checkout/receipt screen-->
+    <string name="hotel_receipt_view_map">Afficher la carte</string>
     <!-- Expedia Rate - Non merchant default infosite messaging -->
     <string name="non_merchant_rate_TEMPLATE">Tarif {brand}</string>
     <!-- Free cancellation template string where we insert the date the free cancellation expires -->
@@ -1851,6 +1850,8 @@
     <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">Le total pour votre voyage, en comprenant les frais hôteliers de &lt;b&gt;%1$s&lt;/b&gt;, sera de &lt;b&gt;%2$s&lt;/b&gt;. Vous paierez à l\&apos;hôtel le solde de votre réservation (dans la devise de l\&apos;hôtel) au moment de votre séjour.</string>
     <!-- Flights AB Test Free Cancellation-->
     <string name="ab_test_flights_free_cancellation">Annulation sans frais dans les 24 heures</string>
+    <!-- Flights AB Test Traveler info missing callout label -->
+    <string name="ab_test_flights_missing_info_callout">Entrer les détails du voyageur</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -1907,20 +1908,48 @@
     <string name="guest_details">Détails sur l\&apos;invité</string>
     <!-- Add adult traveler number template -->
     <string name="add_adult_number_TEMPLATE">Détails sur l\&apos;adulte n. %1$s</string>
+    <!-- AB test variate 1 - Add adult traveler number template -->
+    <string name="add_adult_number_variate1_TEMPLATE">Entrer les détails sur l\&apos;adulte %1$s</string>
+    <!-- AB test variate 2 - Add adult traveler number template -->
+    <string name="add_adult_number_variate2_TEMPLATE">Adulte %1$s</string>
     <!-- Add adult traveler details label -->
-    <string name="add_adult">Détails sur l\&apos; adulte</string>
+    <string name="add_adult">Détails sur l\&apos;adulte</string>
+    <!-- AB test variate 1 - Add adult traveler details label -->
+    <string name="add_adult_variate1">Entrer les détails sur l\&apos;adulte</string>
+    <!-- AB test variate 2 - Add adult traveler details label -->
+    <string name="add_adult_variate2">Adulte</string>
     <!-- Add child traveler number template -->
-    <string name="add_child_number_TEMPLATE">Détails sur l\&apos;enfant n. %1$s</string>
+    <string name="add_child_number_TEMPLATE">Détails sur l\&apos;enfant %1$s</string>
     <!-- Add child traveler number template. We need to show the age of each child passenger -->
-    <string name="add_child_with_age_TEMPLATE">Détails sur l\&apos;enfant de %1$s ans</string>
+    <string name="add_child_with_age_TEMPLATE">Détails sur l\&apos;enfant de %1$s an(s)</string>
+    <!-- AB test variate 1 - Add child traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_variate1_TEMPLATE">Entrer les détails sur l\&apos;enfant de %1$s an(s)</string>
+    <!-- Add child variate 2 - traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_variate2_TEMPLATE">%1$s ans</string>
     <!-- Add infant in lap traveler number template -->
-    <string name="add_infant_in_lap_number_TEMPLATE">Détails sur le jeune enfant n. %1$s sur les genoux</string>
+    <string name="add_infant_in_lap_number_TEMPLATE">Détails sur le jeune enfant %1$s sur les genoux</string>
+    <!-- AB test variate 1 - Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_variate1_TEMPLATE">Entrer les détails sur le jeune enfant %1$s sur les genoux</string>
+    <!-- AB test variate 2 - Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_variate2_TEMPLATE">Jeune enfant %1$s sur les genoux</string>
     <!-- Add just one infant in lap, travelers checkout screen -->
     <string name="add_infant_in_lap">Détails sur le jeune enfant sur les genoux</string>
+    <!-- Ab test variate 1 - Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap_variate1">Entrer les détails sur le jeune enfant sur les genoux</string>
+    <!-- Ab test variate 2 - Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap_variate2">Jeune enfant sur les genoux</string>
     <!-- Add infant in seat traveler number template -->
-    <string name="add_infant_in_seat_number_TEMPLATE">Détails sur le jeune enfant n. %1$s dans un siège</string>
+    <string name="add_infant_in_seat_number_TEMPLATE">Détails sur le jeune enfant %1$s dans un siège</string>
+    <!-- AB test variate 1- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_variate1_TEMPLATE">Entrer les détails sur le jeune enfant %1$s dans un siège</string>
+    <!-- AB test variate 2- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_variate2_TEMPLATE">Jeune enfant %1$s dans un siège</string>
     <!-- Add just one infant in seat, travelers checkout screen -->
     <string name="add_infant_in_seat">Détails sur le jeune enfant dans un siège</string>
+    <!-- AB test variate 1 - Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat_variate1">Entrer les détails sur le jeune enfant dans un siège</string>
+    <!-- AB test variate 2 - Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat_variate2">Jeune enfant dans un siège</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">L\&apos;embarquement pourrait être refusé si le nom du voyageur ne correspond pas à celui sur la carte d\&apos;identité avec photo émise par le gouvernement.</string>
 
@@ -2687,6 +2716,8 @@
     <string name="included_in_the_price">Compris dans le prix</string>
     <!-- Not included in the price -->
     <string name="not_included_in_the_price">Non compris dans le prix</string>
+    <!-- View Room button text -->
+    <string name="view_room_button_text">Afficher la chambre</string>
 
     <!-- Renovation Notice -->
     <string name="renovation_notice">Avis de rénovation</string>
@@ -2750,8 +2781,6 @@
     <string name="sign_in">Ouvrir une session</string>
     <!-- Sign in blurb: descriptive second line of text on sign in button on larger screens -->
     <string name="Earn_points_and_book_fast">Obtenez des points et réservez rapidement.</string>
-    <!-- Hint for user to enter password into a field -->
-    <string name="hint_password">Mot de passe</string>
     <!-- Progress dialog text when we are signing the user into Expedia -->
     <string name="signing_in">Ouverture de session…</string>
     <!-- Message that tells user they failed to sign in -->
@@ -2764,14 +2793,8 @@
     <string name="Expedia_plus_silver">Expedia +argent</string>
     <!-- Label for Expedia +gold rewards program name -->
     <string name="Expedia_plus_gold">Expedia +or</string>
-    <!-- Label for signin screen -->
-    <string name="account_TEMPLATE">Compte {brand}</string>
     <!-- Label for loading user profile from Expedia -->
     <string name="loading_brand_account_TEMPLATE">Chargement du compte {brand}</string>
-    <!-- Label for password recovery -->
-    <string name="forgot_your_password">Vous avez oublié votre mot de passe?</string>
-    <!-- Webview title for password recovery -->
-    <string name="title_forgot_password">Mot de passe oublié</string>
     <!-- Label for coupon code area of booking form -->
     <string name="coupon_code">Entrez le code de votre bon de réduction ou promotion</string>
     <!-- Label for coupon code hint -->
@@ -3481,9 +3504,6 @@
     <string name="cd_checkout_select_payment">Appuyez pour sélectionner le paiement pour cette réservation</string>
     <!-- Content description for action: Press to enter a coupon or promotional code -->
     <string name="cd_checkout_enter_coupon">Appuyez pour entrer un code de bon de réduction ou un code promotionnel</string>
-    <!-- Sign in screen -->
-    <!-- Content description for action: Press to sign in to Expedia with your Facebook account -->
-    <string name="cd_sign_into_brand_with_your_facebook_account_TEMPLATE">Appuyez pour ouvrir une session sur {brand} avec votre compte Facebook</string>
     <!-- Traveler Information screen -->
     <!-- Content description for action: Press to enter a new traveler -->
     <string name="cd_traveler_enter_new_traveler">Appuyez pour entrer un nouveau voyageur</string>
@@ -3578,7 +3598,5 @@
     <string name="child_age_label">Sélectionnez l\&apos;âge de chaque enfant</string>
 
     <string name="lob_not_supported_error_message">Désolé, la réservation de {lob} depuis votre appareil mobile n\&apos;est pas encore disponible dans votre région.</string>
-    <string name="acct_Create_an_Expedia_account">Créer un compte Expedia</string>
-    <string name="acct_Welcome_to_Expedia">Bienvenue sur Expedia</string>
 
 </resources>
