--- a/project/src/main/res/values-ja/strings.xml
+++ b/project/src/main/res/values-ja/strings.xml
@@ -266,7 +266,7 @@
     <!-- Template for multiple duration text on Search results Eg: 2d+ -->
     <string name="search_result_multiple_duration_TEMPLATE">%1$s +</string>
     <!-- Cancellation policy template -->
-    <string name="cancellation_policy_TEMPLATE">予約時間開始の %1$s前まで無料でキャンセルできます。この時間以降は、キャンセル、変更、および返金はできません。</string>
+    <string name="lx_cancellation_policy_TEMPLATE">予約開始の {hours} 時間前まで無料でキャンセルできます。この時間以降は、キャンセル、変更、および返金はできません。</string>
     <!-- Cancellation policy text for non-cancellable activities -->
     <string name="lx_policy_non_cancellable">この予約は返金不可のため、ご予約後の変更およびキャンセルはできません。</string>
     <!-- LX checkout cost breakdown total due today -->
@@ -712,8 +712,6 @@
         <item quantity="other">つのアイテムが予約されています</item>
     </plurals>
 
-    <!-- LX Sort & Filter "Apply" header -->
-    <string name="lx_apply_sort_filter">適用</string>
     <!-- LX Sort & Filter "Sort By" section header -->
     <string name="lx_sort_by">並べ替え</string>
     <!-- LX Sort & Filter "Categories" header -->
@@ -874,32 +872,23 @@
     <string name="unable_to_sign_into_facebook">Facebook にサインインできません。</string>
     <!-- Sign failed try again. Note: the text "Country setting" is referring to the option from the settings page that is titled "Country" in the English translation. -->
     <string name="sign_in_failed_try_again">サインインに失敗しました。メールアドレスとパスワードに間違いがない場合は、アプリの国の設定が正しいことを確認してください。</string>
-    <!-- User needs to reset password -->
-    <string name="sign_in_reset_password_TEMPLATE">{brand}の全サイト共通のグローバル アカウントの作成が必要です。&lt;br&gt;以下の「パスワードをお忘れですか ?」リンクをクリックして、パスワードをリセットしてください。</string>
     <!-- Facebook connect password hint -->
     <string name="brand_password_hint_TEMPLATE">{brand} のパスワード</string>
     <!-- Link accounts -->
     <string name="link_accounts">アカウントをリンクする</string>
-    <!-- Failure to update the user -->
-    <string name="failure_to_update_user">更新されたユーザー情報を取得できませんでした。</string>
-    <!-- User Denied email permission try again button text -->
-    <string name="authorize_email_facebook_button">電子メールアドレスの認証を許可する</string>
     <!-- User Denied email permission Heading -->
     <string name="user_denied_permission_email_heading">電子メールアドレスの認証</string>
-    <!-- User Denied email permission re-request message -->
-    <string name="user_denied_permission_email_message_TEMPLATE">Facebook アカウントでサインインするには、電子メールアドレスの認証を許可してください。\n\n下記の Facebook ボタンをタップして許可すると、{brand}が電子メールアドレスを認証します。ありがとうございます !</string>
     <!-- Linking your accounts -->
     <string name="linking_your_accounts">アカウントをリンク中…</string>
-    <!-- Sign In -->
-    <string name="Sign_In">サインイン</string>
+    <!-- User Denied email permission try again button text -->
+    <string name="authorize_email_facebook_button">電子メールアドレスの認証を許可する</string>
+    <!-- User Denied email permission re-request message -->
+    <string name="user_denied_permission_email_message_TEMPLATE">Facebook アカウントでサインインするには、電子メールアドレスの認証を許可してください。\n\n下記の Facebook ボタンをタップして許可すると、{brand}が電子メールアドレスを認証します。ありがとうございます !</string>
+
     <!-- Sign in with Expedia -->
     <string name="Sign_in_with_TEMPLATE">{brand} アカウントでサインイン</string>
-    <!-- Sign in with the current brand -->
-    <string name="sign_in_with_brand_TEMPLATE">{brand} アカウントでサインイン</string>
     <!-- or -->
     <string name="or">または</string>
-    <!-- Already signed in -->
-    <string name="already_signed_in">すでにサインイン済み</string>
 
     <!-- Restricted Profile -->
     <!-- Restricted profile sign in message -->
@@ -1006,7 +995,7 @@
     <!-- Find Itinerary # -->
     <string name="find_itinerary_pound">旅程番号を検索する</string>
     <!-- Expedia Itinerary -->
-    <string name="itinerary_TEMPLATE">{brand} 旅程番号 : </string>
+    <string name="itinerary_TEMPLATE">{brand} 旅程番号</string>
     <!-- Label for exclusive +silver phone number, "Expedia +silver Customer Support" -->
     <string name="Expedia_plus_Silver_Customer_Support">Expedia +silver カスタマー サポート</string>
     <!-- Label for exclusive +gold phone number, "Expedia +gold Customer Support" -->
@@ -1717,6 +1706,12 @@
     <string name="select_payment">お支払い方法を選択する</string>
     <!-- Select payment sentence case -->
     <string name="select_payment_sentence_case">支払い情報の詳細</string>
+    <!-- Select payment sentence case AB Test variate1 -->
+    <string name="select_payment_sentence_case_variate1">支払い情報を入力</string>
+    <!-- Select payment sentence case AB Test variate2 -->
+    <string name="select_payment_sentence_case_variate2">お支払い</string>
+    <!-- Select payment callout AB Test variate2 -->
+    <string name="select_payment_callout">詳細を入力</string>
     <!-- Add new card -->
     <string name="add_new_card">新しいカードを追加する</string>
     <!-- Overview button -->
@@ -1811,6 +1806,10 @@
     <string name="menu_checkout">購入手続き</string>
     <!-- Our best price gaurentee string -->
     <string name="best_price_guarantee">最低価格保証</string>
+    <!-- Label for address of hotel in checkout/receipt screen-->
+    <string name="hotel_receipt_address">住所 :</string>
+    <!-- Label to view map of hotel in checkout/receipt screen-->
+    <string name="hotel_receipt_view_map">地図を表示する</string>
     <!-- Expedia Rate - Non merchant default infosite messaging -->
     <string name="non_merchant_rate_TEMPLATE">{brand} 料金</string>
     <!-- Free cancellation template string where we insert the date the free cancellation expires -->
@@ -1851,6 +1850,8 @@
     <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">ご旅行の合計金額は &lt;b&gt;%2$s&lt;/b&gt; です (&lt;b&gt;%1$s&lt;/b&gt;のリゾート料金を含む)。残額は滞在中にホテルの現地通貨でお支払いください。</string>
     <!-- Flights AB Test Free Cancellation-->
     <string name="ab_test_flights_free_cancellation">予約後 24 時間以内ならキャンセル手数料無料 !</string>
+    <!-- Flights AB Test Traveler info missing callout label -->
+    <string name="ab_test_flights_missing_info_callout">旅行者情報を入力</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -1907,20 +1908,48 @@
     <string name="guest_details">ゲストの詳細</string>
     <!-- Add adult traveler number template -->
     <string name="add_adult_number_TEMPLATE">大人 %1$s の詳細</string>
+    <!-- AB test variate 1 - Add adult traveler number template -->
+    <string name="add_adult_number_variate1_TEMPLATE">大人 %1$s の情報を入力</string>
+    <!-- AB test variate 2 - Add adult traveler number template -->
+    <string name="add_adult_number_variate2_TEMPLATE">大人 %1$s</string>
     <!-- Add adult traveler details label -->
     <string name="add_adult">大人の詳細</string>
+    <!-- AB test variate 1 - Add adult traveler details label -->
+    <string name="add_adult_variate1">大人の情報を入力</string>
+    <!-- AB test variate 2 - Add adult traveler details label -->
+    <string name="add_adult_variate2">大人</string>
     <!-- Add child traveler number template -->
     <string name="add_child_number_TEMPLATE">お子様 %1$s の詳細</string>
     <!-- Add child traveler number template. We need to show the age of each child passenger -->
-    <string name="add_child_with_age_TEMPLATE">%1$s 才のお子様の詳細</string>
+    <string name="add_child_with_age_TEMPLATE">%1$s 歳のお子様の詳細</string>
+    <!-- AB test variate 1 - Add child traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_variate1_TEMPLATE">%1$s 歳のお子様の情報を入力</string>
+    <!-- Add child variate 2 - traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_variate2_TEMPLATE">%1$s 歳</string>
     <!-- Add infant in lap traveler number template -->
     <string name="add_infant_in_lap_number_TEMPLATE">膝抱きの乳幼児 %1$s の詳細</string>
+    <!-- AB test variate 1 - Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_variate1_TEMPLATE">膝抱きの乳幼児 %1$s の情報を入力</string>
+    <!-- AB test variate 2 - Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_variate2_TEMPLATE">膝抱きの乳幼児 %1$s</string>
     <!-- Add just one infant in lap, travelers checkout screen -->
     <string name="add_infant_in_lap">膝抱きの乳幼児の詳細</string>
+    <!-- Ab test variate 1 - Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap_variate1">膝抱きの乳幼児の情報を入力</string>
+    <!-- Ab test variate 2 - Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap_variate2">膝抱きの乳幼児</string>
     <!-- Add infant in seat traveler number template -->
     <string name="add_infant_in_seat_number_TEMPLATE">座席が必要な乳幼児 %1$s の詳細</string>
+    <!-- AB test variate 1- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_variate1_TEMPLATE">座席が必要な乳幼児 %1$s の情報を入力</string>
+    <!-- AB test variate 2- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_variate2_TEMPLATE">座席が必要な乳幼児 %1$s</string>
     <!-- Add just one infant in seat, travelers checkout screen -->
     <string name="add_infant_in_seat">座席が必要な乳幼児の詳細</string>
+    <!-- AB test variate 1 - Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat_variate1">座席が必要な乳幼児の情報を入力</string>
+    <!-- AB test variate 2 - Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat_variate2">予約席ありの乳幼児</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">旅行者名がパスポートなど写真付きの公的証明書に記載された名前と一致しない場合は搭乗できません。</string>
 
@@ -2687,6 +2716,8 @@
     <string name="included_in_the_price">料金に含まれる</string>
     <!-- Not included in the price -->
     <string name="not_included_in_the_price">料金に含まれない</string>
+    <!-- View Room button text -->
+    <string name="view_room_button_text">部屋を見る</string>
 
     <!-- Renovation Notice -->
     <string name="renovation_notice">改装工事のお知らせ</string>
@@ -2750,8 +2781,6 @@
     <string name="sign_in">サインイン</string>
     <!-- Sign in blurb: descriptive second line of text on sign in button on larger screens -->
     <string name="Earn_points_and_book_fast">ポイントを獲得してすばやく予約</string>
-    <!-- Hint for user to enter password into a field -->
-    <string name="hint_password">パスワード</string>
     <!-- Progress dialog text when we are signing the user into Expedia -->
     <string name="signing_in">サインイン…</string>
     <!-- Message that tells user they failed to sign in -->
@@ -2764,14 +2793,8 @@
     <string name="Expedia_plus_silver">Expedia +silver</string>
     <!-- Label for Expedia +gold rewards program name -->
     <string name="Expedia_plus_gold">Expedia +gold</string>
-    <!-- Label for signin screen -->
-    <string name="account_TEMPLATE">{brand} アカウント</string>
     <!-- Label for loading user profile from Expedia -->
     <string name="loading_brand_account_TEMPLATE">{brand} アカウントを読み込み中</string>
-    <!-- Label for password recovery -->
-    <string name="forgot_your_password">パスワードをお忘れですか ?</string>
-    <!-- Webview title for password recovery -->
-    <string name="title_forgot_password">パスワードを忘れた場合</string>
     <!-- Label for coupon code area of booking form -->
     <string name="coupon_code">クーポンコードを入力</string>
     <!-- Label for coupon code hint -->
@@ -3481,9 +3504,6 @@
     <string name="cd_checkout_select_payment">タップしてこの予約の支払い方法を選択</string>
     <!-- Content description for action: Press to enter a coupon or promotional code -->
     <string name="cd_checkout_enter_coupon">タップしてクーポンあるいはプロモーション コードを入力</string>
-    <!-- Sign in screen -->
-    <!-- Content description for action: Press to sign in to Expedia with your Facebook account -->
-    <string name="cd_sign_into_brand_with_your_facebook_account_TEMPLATE">タップして Facebook アカウントを使って {brand} にサインイン</string>
     <!-- Traveler Information screen -->
     <!-- Content description for action: Press to enter a new traveler -->
     <string name="cd_traveler_enter_new_traveler">タップして新しい旅行者を入力</string>
@@ -3578,7 +3598,5 @@
     <string name="child_age_label">お子様の年齢を選択する</string>
 
     <string name="lob_not_supported_error_message">{lob}の予約は、お客様のロケーションではまだご利用いただけません。</string>
-    <string name="acct_Create_an_Expedia_account">エクスペディアのアカウントを作成する</string>
-    <string name="acct_Welcome_to_Expedia">エクスペディアにようこそ</string>
 
 </resources>
