--- a/project/src/main/res/values-sv/strings.xml
+++ b/project/src/main/res/values-sv/strings.xml
@@ -266,7 +266,7 @@
     <!-- Template for multiple duration text on Search results Eg: 2d+ -->
     <string name="search_result_multiple_duration_TEMPLATE">%1$s +</string>
     <!-- Cancellation policy template -->
-    <string name="cancellation_policy_TEMPLATE">Du kan avboka gratis fram till %1$s innan bokningens start. Därefter görs inga avbokningar, ändringar eller återbetalningar.</string>
+    <string name="lx_cancellation_policy_TEMPLATE">Du kan avboka gratis fram till {hours} timmar innan bokningens start. Därefter tillåts inga avbokningar, ändringar eller återbetalningar.</string>
     <!-- Cancellation policy text for non-cancellable activities -->
     <string name="lx_policy_non_cancellable">Den här bokningen är inte återbetalningsbar och kan inte avbokas eller ändras efter att du har bokat.</string>
     <!-- LX checkout cost breakdown total due today -->
@@ -709,11 +709,9 @@
         <item quantity="two">artiklar i resplanen</item>
         <item quantity="few">artiklar i resplanen</item>
         <item quantity="many">artiklar i resplanen</item>
-        <item quantity="other">artiklar i resplanen</item>
+        <item quantity="other">artiklar i den här resplanen</item>
     </plurals>
 
-    <!-- LX Sort & Filter "Apply" header -->
-    <string name="lx_apply_sort_filter">Använd</string>
     <!-- LX Sort & Filter "Sort By" section header -->
     <string name="lx_sort_by">Sortera efter</string>
     <!-- LX Sort & Filter "Categories" header -->
@@ -874,32 +872,23 @@
     <string name="unable_to_sign_into_facebook">Inloggningen på Facebook misslyckades.</string>
     <!-- Sign failed try again. Note: the text "Country setting" is referring to the option from the settings page that is titled "Country" in the English translation. -->
     <string name="sign_in_failed_try_again">Inloggningen misslyckades. Om din e-postadress och ditt lösenord stämmer ber vi dig bekräfta att din app är inställd på rätt land.</string>
-    <!-- User needs to reset password -->
-    <string name="sign_in_reset_password_TEMPLATE">Vi måste be dig att skapa nya inloggningsuppgifter som gäller globalt för samtliga {brand}-sidor.&lt;br&gt;Återställ ditt lösenord genom att klicka på länken "Har du glömt ditt lösenord?" nedan.</string>
     <!-- Facebook connect password hint -->
     <string name="brand_password_hint_TEMPLATE">Lösenord på {brand}</string>
     <!-- Link accounts -->
     <string name="link_accounts">Länka konton</string>
-    <!-- Failure to update the user -->
-    <string name="failure_to_update_user">Vi lyckades inte hämta uppdaterade användaruppgifter.</string>
-    <!-- User Denied email permission try again button text -->
-    <string name="authorize_email_facebook_button">Ge e-posttillåtelse</string>
     <!-- User Denied email permission Heading -->
     <string name="user_denied_permission_email_heading">E-posttillåtelse</string>
-    <!-- User Denied email permission re-request message -->
-    <string name="user_denied_permission_email_message_TEMPLATE">För att logga in med Facebook behöver vi din tillåtelse att verifiera din e-postadress. \n\nTryck på Facebook-nedan för att ge {brand} tillåtelse att verifiera din e-postadress. Tack!</string>
     <!-- Linking your accounts -->
     <string name="linking_your_accounts">Länkar dina konton…</string>
-    <!-- Sign In -->
-    <string name="Sign_In">Logga in</string>
+    <!-- User Denied email permission try again button text -->
+    <string name="authorize_email_facebook_button">Ge e-posttillåtelse</string>
+    <!-- User Denied email permission re-request message -->
+    <string name="user_denied_permission_email_message_TEMPLATE">För att logga in med Facebook behöver vi din tillåtelse att verifiera din e-postadress. \n\nTryck på Facebook-nedan för att ge {brand} tillåtelse att verifiera din e-postadress. Tack!</string>
+
     <!-- Sign in with Expedia -->
     <string name="Sign_in_with_TEMPLATE">Logga in med {brand}</string>
-    <!-- Sign in with the current brand -->
-    <string name="sign_in_with_brand_TEMPLATE">Logga in med {brand}</string>
     <!-- or -->
     <string name="or">eller</string>
-    <!-- Already signed in -->
-    <string name="already_signed_in">Redan inloggad</string>
 
     <!-- Restricted Profile -->
     <!-- Restricted profile sign in message -->
@@ -1717,6 +1706,12 @@
     <string name="select_payment">Välj betalning</string>
     <!-- Select payment sentence case -->
     <string name="select_payment_sentence_case">Betalningsuppgifter</string>
+    <!-- Select payment sentence case AB Test variate1 -->
+    <string name="select_payment_sentence_case_variate1">Ange betalningsuppgifter</string>
+    <!-- Select payment sentence case AB Test variate2 -->
+    <string name="select_payment_sentence_case_variate2">Betalning</string>
+    <!-- Select payment callout AB Test variate2 -->
+    <string name="select_payment_callout">Ange uppgifter</string>
     <!-- Add new card -->
     <string name="add_new_card">Lägg till nytt kort</string>
     <!-- Overview button -->
@@ -1811,6 +1806,10 @@
     <string name="menu_checkout">Betala</string>
     <!-- Our best price gaurentee string -->
     <string name="best_price_guarantee">Prisgaranti</string>
+    <!-- Label for address of hotel in checkout/receipt screen-->
+    <string name="hotel_receipt_address">Adress:</string>
+    <!-- Label to view map of hotel in checkout/receipt screen-->
+    <string name="hotel_receipt_view_map">Se karta</string>
     <!-- Expedia Rate - Non merchant default infosite messaging -->
     <string name="non_merchant_rate_TEMPLATE">{brand}pris</string>
     <!-- Free cancellation template string where we insert the date the free cancellation expires -->
@@ -1851,6 +1850,8 @@
     <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">Totalbeloppet för din resa, inklusive resortavgiften på &lt;b&gt;%1$s&lt;/b&gt;, blir &lt;b&gt;%2$s&lt;/b&gt;. Du betalar hotellet den resterande kostnaden för din bokning (i hotellets lokala valuta) under din vistelse.</string>
     <!-- Flights AB Test Free Cancellation-->
     <string name="ab_test_flights_free_cancellation">Gratis avbokning inom 24 timmar</string>
+    <!-- Flights AB Test Traveler info missing callout label -->
+    <string name="ab_test_flights_missing_info_callout">Ange resenärens uppgifter</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -1906,21 +1907,49 @@
     <!-- Add Guest for hotels -->
     <string name="guest_details">Gästinformation</string>
     <!-- Add adult traveler number template -->
-    <string name="add_adult_number_TEMPLATE">Info om vuxen resenär %1$s</string>
+    <string name="add_adult_number_TEMPLATE">Uppgifter för vuxen resenär %1$s</string>
+    <!-- AB test variate 1 - Add adult traveler number template -->
+    <string name="add_adult_number_variate1_TEMPLATE">Ange uppgifter för vuxen resenär %1$s</string>
+    <!-- AB test variate 2 - Add adult traveler number template -->
+    <string name="add_adult_number_variate2_TEMPLATE">Vuxen resenär %1$s</string>
     <!-- Add adult traveler details label -->
-    <string name="add_adult">Info om vuxen resenär</string>
+    <string name="add_adult">Vuxna resenärens uppgifter</string>
+    <!-- AB test variate 1 - Add adult traveler details label -->
+    <string name="add_adult_variate1">Ange uppgifter för vuxen resenär</string>
+    <!-- AB test variate 2 - Add adult traveler details label -->
+    <string name="add_adult_variate2">Vuxen</string>
     <!-- Add child traveler number template -->
-    <string name="add_child_number_TEMPLATE">Info om barnresenär %1$s</string>
+    <string name="add_child_number_TEMPLATE">Uppgifter för barnresenär %1$s</string>
     <!-- Add child traveler number template. We need to show the age of each child passenger -->
-    <string name="add_child_with_age_TEMPLATE">Info om %1$s-åring</string>
+    <string name="add_child_with_age_TEMPLATE">Uppgifter för %1$s-åring</string>
+    <!-- AB test variate 1 - Add child traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_variate1_TEMPLATE">Uppgifter för %1$s-åring</string>
+    <!-- Add child variate 2 - traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_variate2_TEMPLATE">%1$s-åring</string>
     <!-- Add infant in lap traveler number template -->
-    <string name="add_infant_in_lap_number_TEMPLATE">Info om spädbarn %1$s i knä</string>
+    <string name="add_infant_in_lap_number_TEMPLATE">Uppgifter för spädbarn %1$s i knä</string>
+    <!-- AB test variate 1 - Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_variate1_TEMPLATE">Ange uppgifter för spädbarn %1$s i knä</string>
+    <!-- AB test variate 2 - Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_variate2_TEMPLATE">Spädbarn %1$s i knä</string>
     <!-- Add just one infant in lap, travelers checkout screen -->
-    <string name="add_infant_in_lap">Info om spädbarn i knä</string>
+    <string name="add_infant_in_lap">Uppgifter för spädbarn i knä</string>
+    <!-- Ab test variate 1 - Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap_variate1">Ange uppgifter för spädbarn i knä</string>
+    <!-- Ab test variate 2 - Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap_variate2">Spädbarn i knä</string>
     <!-- Add infant in seat traveler number template -->
-    <string name="add_infant_in_seat_number_TEMPLATE">Info om spädbarn %1$s i säte</string>
+    <string name="add_infant_in_seat_number_TEMPLATE">Uppgifter för spädbarn %1$s i säte</string>
+    <!-- AB test variate 1- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_variate1_TEMPLATE">Ange uppgifter för spädbarn %1$s i säte</string>
+    <!-- AB test variate 2- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_variate2_TEMPLATE">Spädbarn %1$s i säte</string>
     <!-- Add just one infant in seat, travelers checkout screen -->
-    <string name="add_infant_in_seat">Info om spädbarn i säte</string>
+    <string name="add_infant_in_seat">Uppgifter för spädbarn i säte</string>
+    <!-- AB test variate 1 - Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat_variate1">Ange uppgifter för spädbarn i säte</string>
+    <!-- AB test variate 2 - Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat_variate2">Spädbarn i säte</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">Passagerare kan nekas ombordstigning om namnet i bokningen inte matchar namnet i den statligt utfärdade ID-handlingen</string>
 
@@ -2687,6 +2716,8 @@
     <string name="included_in_the_price">Ingår i priset</string>
     <!-- Not included in the price -->
     <string name="not_included_in_the_price">Ingår inte i priset</string>
+    <!-- View Room button text -->
+    <string name="view_room_button_text">Se rum</string>
 
     <!-- Renovation Notice -->
     <string name="renovation_notice">Renoveringsmeddelande</string>
@@ -2750,8 +2781,6 @@
     <string name="sign_in">Logga in</string>
     <!-- Sign in blurb: descriptive second line of text on sign in button on larger screens -->
     <string name="Earn_points_and_book_fast">Tjäna poäng och boka snabbt.</string>
-    <!-- Hint for user to enter password into a field -->
-    <string name="hint_password">Lösenord</string>
     <!-- Progress dialog text when we are signing the user into Expedia -->
     <string name="signing_in">Loggar in…</string>
     <!-- Message that tells user they failed to sign in -->
@@ -2764,14 +2793,8 @@
     <string name="Expedia_plus_silver">Expedia +silver</string>
     <!-- Label for Expedia +gold rewards program name -->
     <string name="Expedia_plus_gold">Expedia +gold</string>
-    <!-- Label for signin screen -->
-    <string name="account_TEMPLATE">{brand}-konto</string>
     <!-- Label for loading user profile from Expedia -->
     <string name="loading_brand_account_TEMPLATE">Hämtar {brand}-konto</string>
-    <!-- Label for password recovery -->
-    <string name="forgot_your_password">Har du glömt ditt lösenord?</string>
-    <!-- Webview title for password recovery -->
-    <string name="title_forgot_password">Glömt lösenordet</string>
     <!-- Label for coupon code area of booking form -->
     <string name="coupon_code">Ange kupong- eller kampanjkod</string>
     <!-- Label for coupon code hint -->
@@ -3481,9 +3504,6 @@
     <string name="cd_checkout_select_payment">Tryck för att välja betalning för bokningen</string>
     <!-- Content description for action: Press to enter a coupon or promotional code -->
     <string name="cd_checkout_enter_coupon">Tryck för att ange en kupong- eller kampanjkod</string>
-    <!-- Sign in screen -->
-    <!-- Content description for action: Press to sign in to Expedia with your Facebook account -->
-    <string name="cd_sign_into_brand_with_your_facebook_account_TEMPLATE">Tryck för att logga in på {brand} med ditt Facebookkonto</string>
     <!-- Traveler Information screen -->
     <!-- Content description for action: Press to enter a new traveler -->
     <string name="cd_traveler_enter_new_traveler">Tryck för att ange en ny resenär</string>
@@ -3578,7 +3598,5 @@
     <string name="child_age_label">Välj vardera barns ålder</string>
 
     <string name="lob_not_supported_error_message">Bokningar av {lob} är tyvärr inte tillgängliga där du befinner dig än.</string>
-    <string name="acct_Create_an_Expedia_account">Skapa ett Expediakonto</string>
-    <string name="acct_Welcome_to_Expedia">Välkommen till Expedia</string>
 
 </resources>
