--- a/project/src/main/res/values-vi/strings.xml
+++ b/project/src/main/res/values-vi/strings.xml
@@ -266,7 +266,7 @@
     <!-- Template for multiple duration text on Search results Eg: 2d+ -->
     <string name="search_result_multiple_duration_TEMPLATE">%1$s trở lên</string>
     <!-- Cancellation policy template -->
-    <string name="cancellation_policy_TEMPLATE">Có thể hủy miễn phí đến %1$s trước khi hoạt động quý vị đặt bắt đầu. Sau thời điểm đó, không được hủy, thay đổi hay hoàn tiền.</string>
+    <string name="lx_cancellation_policy_TEMPLATE">Có thể hủy miễn phí đến {hours} giờ trước giờ bắt đầu hoạt động đã đặt. Sau thời điểm đó, không được hủy, thay đổi hay hoàn tiền.</string>
     <!-- Cancellation policy text for non-cancellable activities -->
     <string name="lx_policy_non_cancellable">Đây là đặt chỗ không hoàn tiền và không thể thay đổi hoặc hủy sau khi đặt.</string>
     <!-- LX checkout cost breakdown total due today -->
@@ -712,8 +712,6 @@
         <item quantity="other">mục trong Chuyến đi</item>
     </plurals>
 
-    <!-- LX Sort & Filter "Apply" header -->
-    <string name="lx_apply_sort_filter">Áp dụng</string>
     <!-- LX Sort & Filter "Sort By" section header -->
     <string name="lx_sort_by">Sắp xếp theo</string>
     <!-- LX Sort & Filter "Categories" header -->
@@ -874,32 +872,23 @@
     <string name="unable_to_sign_into_facebook">Không thể đăng nhập Facebook.</string>
     <!-- Sign failed try again. Note: the text "Country setting" is referring to the option from the settings page that is titled "Country" in the English translation. -->
     <string name="sign_in_failed_try_again">Không đăng nhập được. Nếu đã nhập đúng địa chỉ email và mật khẩu, vui lòng kiểm tra xác nhận cài đặt quốc gia trên app của quý vị chính xác.</string>
-    <!-- User needs to reset password -->
-    <string name="sign_in_reset_password_TEMPLATE">Vui lòng tạo một tài khoản mới, dùng chung cho tất cả các trang {brand}.&lt;br&gt;Vui lòng thiết lập lại mật khẩu, sử dụng link \&apos;Quên mật khẩu?\&apos; dưới đây.</string>
     <!-- Facebook connect password hint -->
     <string name="brand_password_hint_TEMPLATE">Mật khẩu {brand}</string>
     <!-- Link accounts -->
     <string name="link_accounts">Kết nối tài khoản</string>
-    <!-- Failure to update the user -->
-    <string name="failure_to_update_user">Không truy xuất được thông tin người dùng đã cập nhật.</string>
-    <!-- User Denied email permission try again button text -->
-    <string name="authorize_email_facebook_button">Cho phép truy xuất email</string>
     <!-- User Denied email permission Heading -->
     <string name="user_denied_permission_email_heading">Quyền truy xuất email</string>
-    <!-- User Denied email permission re-request message -->
-    <string name="user_denied_permission_email_message_TEMPLATE">Để đăng nhập bằng tài khoản Facebook, quý vị cần cho phép chúng tôi xác thực địa chỉ email. \n\nVui lòng chạm vào nút Facebook dưới đây để cho phép {brand} xác thực địa chỉ email của quý vị. Cám ơn!</string>
     <!-- Linking your accounts -->
     <string name="linking_your_accounts">Đang kết nối tài khoản của quý vị…</string>
-    <!-- Sign In -->
-    <string name="Sign_In">Đăng nhập</string>
+    <!-- User Denied email permission try again button text -->
+    <string name="authorize_email_facebook_button">Cho phép truy xuất email</string>
+    <!-- User Denied email permission re-request message -->
+    <string name="user_denied_permission_email_message_TEMPLATE">Để đăng nhập bằng tài khoản Facebook, quý vị cần cho phép chúng tôi xác thực địa chỉ email. \n\nVui lòng chạm vào nút Facebook dưới đây để cho phép {brand} xác thực địa chỉ email của quý vị. Cám ơn!</string>
+
     <!-- Sign in with Expedia -->
     <string name="Sign_in_with_TEMPLATE">Đăng nhập {brand}</string>
-    <!-- Sign in with the current brand -->
-    <string name="sign_in_with_brand_TEMPLATE">Đăng nhập {brand}</string>
     <!-- or -->
     <string name="or">hoặc</string>
-    <!-- Already signed in -->
-    <string name="already_signed_in">Đã đăng nhập</string>
 
     <!-- Restricted Profile -->
     <!-- Restricted profile sign in message -->
@@ -1717,6 +1706,12 @@
     <string name="select_payment">Chọn phương thức thanh toán</string>
     <!-- Select payment sentence case -->
     <string name="select_payment_sentence_case">Chi tiết thanh toán</string>
+    <!-- Select payment sentence case AB Test variate1 -->
+    <string name="select_payment_sentence_case_variate1">Nhập chi tiết thanh toán</string>
+    <!-- Select payment sentence case AB Test variate2 -->
+    <string name="select_payment_sentence_case_variate2">Thanh toán</string>
+    <!-- Select payment callout AB Test variate2 -->
+    <string name="select_payment_callout">Nhập chi tiết</string>
     <!-- Add new card -->
     <string name="add_new_card">Thêm thẻ mới</string>
     <!-- Overview button -->
@@ -1811,6 +1806,10 @@
     <string name="menu_checkout">Thanh toán</string>
     <!-- Our best price gaurentee string -->
     <string name="best_price_guarantee">Đảm bảo Giá tốt nhất</string>
+    <!-- Label for address of hotel in checkout/receipt screen-->
+    <string name="hotel_receipt_address">Địa chỉ:</string>
+    <!-- Label to view map of hotel in checkout/receipt screen-->
+    <string name="hotel_receipt_view_map">Xem bản đồ</string>
     <!-- Expedia Rate - Non merchant default infosite messaging -->
     <string name="non_merchant_rate_TEMPLATE">Giá đặc biệt trên {brand}</string>
     <!-- Free cancellation template string where we insert the date the free cancellation expires -->
@@ -1851,6 +1850,8 @@
     <string name="pay_later_deposit_resort_disclaimer_TEMPLATE">Tổng giá chuyến đi, bao gồm phí resort &lt;b&gt;%1$s&lt;/b&gt;, là &lt;b&gt;%2$s&lt;/b&gt;. Quý vị sẽ thanh toán phần còn lại với khách sạn (bằng loại tiền tệ địa phương khách sạn) trong thời gian lưu trú.</string>
     <!-- Flights AB Test Free Cancellation-->
     <string name="ab_test_flights_free_cancellation">Hủy miễn phí trong vòng 24 giờ sau khi đặt</string>
+    <!-- Flights AB Test Traveler info missing callout label -->
+    <string name="ab_test_flights_missing_info_callout">Nhập thông tin khách</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -1907,20 +1908,48 @@
     <string name="guest_details">Chi tiết khách</string>
     <!-- Add adult traveler number template -->
     <string name="add_adult_number_TEMPLATE">Chi tiết người lớn %1$s</string>
+    <!-- AB test variate 1 - Add adult traveler number template -->
+    <string name="add_adult_number_variate1_TEMPLATE">Nhập thông tin người lớn %1$s</string>
+    <!-- AB test variate 2 - Add adult traveler number template -->
+    <string name="add_adult_number_variate2_TEMPLATE">Người lớn %1$s</string>
     <!-- Add adult traveler details label -->
     <string name="add_adult">Chi tiết người lớn</string>
+    <!-- AB test variate 1 - Add adult traveler details label -->
+    <string name="add_adult_variate1">Nhập thông tin người lớn</string>
+    <!-- AB test variate 2 - Add adult traveler details label -->
+    <string name="add_adult_variate2">Người lớn</string>
     <!-- Add child traveler number template -->
     <string name="add_child_number_TEMPLATE">Chi tiết trẻ %1$s</string>
     <!-- Add child traveler number template. We need to show the age of each child passenger -->
     <string name="add_child_with_age_TEMPLATE">Chi tiết trẻ %1$s tuổi</string>
+    <!-- AB test variate 1 - Add child traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_variate1_TEMPLATE">Nhập thông tin khách %1$s tuổi</string>
+    <!-- Add child variate 2 - traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_variate2_TEMPLATE">%1$s tuổi</string>
     <!-- Add infant in lap traveler number template -->
     <string name="add_infant_in_lap_number_TEMPLATE">Chi tiết trẻ sơ sinh ngồi trong lòng %1$s</string>
+    <!-- AB test variate 1 - Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_variate1_TEMPLATE">Nhập thông tin trẻ ngồi trong lòng %1$s</string>
+    <!-- AB test variate 2 - Add infant in lap traveler number template -->
+    <string name="add_infant_in_lap_number_variate2_TEMPLATE">Trẻ ngồi trong lòng %1$s</string>
     <!-- Add just one infant in lap, travelers checkout screen -->
     <string name="add_infant_in_lap">Chi tiết trẻ sơ sinh ngồi trong lòng</string>
+    <!-- Ab test variate 1 - Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap_variate1">Nhập thông tin trẻ ngồi trong lòng</string>
+    <!-- Ab test variate 2 - Add just one infant in lap, travelers checkout screen -->
+    <string name="add_infant_in_lap_variate2">Trẻ ngồi trong lòng</string>
     <!-- Add infant in seat traveler number template -->
     <string name="add_infant_in_seat_number_TEMPLATE">Chi tiết trẻ sơ sinh có chỗ ngồi riêng %1$s</string>
+    <!-- AB test variate 1- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_variate1_TEMPLATE">Nhập thông tin trẻ ngồi riêng %1$s</string>
+    <!-- AB test variate 2- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_variate2_TEMPLATE">Trẻ ngồi riêng %1$s</string>
     <!-- Add just one infant in seat, travelers checkout screen -->
     <string name="add_infant_in_seat">Chi tiết trẻ sơ sinh có chỗ ngồi riêng</string>
+    <!-- AB test variate 1 - Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat_variate1">Nhập thông tin trẻ ngồi riêng</string>
+    <!-- AB test variate 2 - Add just one infant in seat, travelers checkout screen -->
+    <string name="add_infant_in_seat_variate2">Trẻ ngồi riêng</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">Khách có thể không được lên máy bay nếu tên khách không trùng khớp với giấy tờ tùy thân (ID) có ảnh hợp lệ.</string>
 
@@ -2687,6 +2716,8 @@
     <string name="included_in_the_price">Đã gồm trong giá</string>
     <!-- Not included in the price -->
     <string name="not_included_in_the_price">Không gồm trong giá</string>
+    <!-- View Room button text -->
+    <string name="view_room_button_text">Xem phòng</string>
 
     <!-- Renovation Notice -->
     <string name="renovation_notice">Thông báo nâng cấp</string>
@@ -2750,8 +2781,6 @@
     <string name="sign_in">Đăng nhập</string>
     <!-- Sign in blurb: descriptive second line of text on sign in button on larger screens -->
     <string name="Earn_points_and_book_fast">Nhận điểm và đặt nhanh hơn.</string>
-    <!-- Hint for user to enter password into a field -->
-    <string name="hint_password">Mật khẩu</string>
     <!-- Progress dialog text when we are signing the user into Expedia -->
     <string name="signing_in">Đang đăng nhập…</string>
     <!-- Message that tells user they failed to sign in -->
@@ -2764,14 +2793,8 @@
     <string name="Expedia_plus_silver">Expedia +silver</string>
     <!-- Label for Expedia +gold rewards program name -->
     <string name="Expedia_plus_gold">Expedia +gold</string>
-    <!-- Label for signin screen -->
-    <string name="account_TEMPLATE">Tài khoản {brand}</string>
     <!-- Label for loading user profile from Expedia -->
     <string name="loading_brand_account_TEMPLATE">Đang tải tài khoản {brand}</string>
-    <!-- Label for password recovery -->
-    <string name="forgot_your_password">Quên mật khẩu?</string>
-    <!-- Webview title for password recovery -->
-    <string name="title_forgot_password">Quên mật khẩu</string>
     <!-- Label for coupon code area of booking form -->
     <string name="coupon_code">Nhập mã coupon hoặc khuyến mãi</string>
     <!-- Label for coupon code hint -->
@@ -3481,9 +3504,6 @@
     <string name="cd_checkout_select_payment">Bám để chọn hình thức thanh toán</string>
     <!-- Content description for action: Press to enter a coupon or promotional code -->
     <string name="cd_checkout_enter_coupon">Bấm để nhập mã coupon hoặc khuyến mãi</string>
-    <!-- Sign in screen -->
-    <!-- Content description for action: Press to sign in to Expedia with your Facebook account -->
-    <string name="cd_sign_into_brand_with_your_facebook_account_TEMPLATE">Bấm để đăng nhập {brand} bằng tài khoản Facebook</string>
     <!-- Traveler Information screen -->
     <!-- Content description for action: Press to enter a new traveler -->
     <string name="cd_traveler_enter_new_traveler">Bấm để thêm khách</string>
@@ -3578,7 +3598,5 @@
     <string name="child_age_label">Chọn tuổi từng trẻ</string>
 
     <string name="lob_not_supported_error_message">Rất tiếc, hiện {lob} chưa hỗ trợ đặt tại địa điểm của quý vị.</string>
-    <string name="acct_Create_an_Expedia_account">Tạo tài khoản Expedia</string>
-    <string name="acct_Welcome_to_Expedia">Expedia xin chào</string>
 
 </resources>
